// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`4gl: hello1.4gl program 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello1.4gl\\"
parserProcess: \\"program\\"
=====================================input======================================
001:main 
002:display \\"hello \\"
003:end main
004:
=====================================output=====================================
program:  [1:1-3:9] {C:1} {A:{}}
| block:  [1:1-3:9] {C:3} {A:{}}
| | beginBlock:  [1:1-1:6] {C:1} {A:{}}
| | | statement: main [1:1-1:4] {C:0} {A:{}}
| | | endLine: - [1:5-1:6] {C:0} {A:{}}
| | | -whiteSpace:   [1:5-1:5] {C:0} {A:{}}
| | | -newLine: \\\\n [1:6-1:6] {C:0} {A:{}}
| | bodyBlock:  [1:1-2:17] {C:1} {A:{}}
| | | statement: display [2:1-2:7] {C:0} {A:{}}
| | | whiteSpace:   [2:8-2:8] {C:0} {A:{}}
| | | string: \\"hello \\" [2:9-2:16] {C:0} {A:{}}
| | | newLine: \\\\n [2:17-2:17] {C:0} {A:{}}
| | endBlock:  [1:1-3:9] {C:1} {A:{}}
| | | statement: end [3:1-3:3] {C:0} {A:{}}
| | | whiteSpace:   [3:4-3:4] {C:0} {A:{}}
| | | statement: main [3:5-3:8] {C:0} {A:{}}
| | | endLine: - [3:9-3:9] {C:0} {A:{}}
| | | -newLine: \\\\n [3:9-3:9] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello1.4gl token 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello1.4gl\\"
parserProcess: \\"token\\"
=====================================input======================================
001:main 
002:display \\"hello \\"
003:end main
004:
=====================================output=====================================
token:  [1:1-3:9] {C:1} {A:{}}
| statement: main [1:1-1:4] {C:0} {A:{}}
| whiteSpace:   [1:5-1:5] {C:0} {A:{}}
| newLine: \\\\n [1:6-1:6] {C:0} {A:{}}
| statement: display [2:1-2:7] {C:0} {A:{}}
| whiteSpace:   [2:8-2:8] {C:0} {A:{}}
| string: \\"hello \\" [2:9-2:16] {C:0} {A:{}}
| newLine: \\\\n [2:17-2:17] {C:0} {A:{}}
| statement: end [3:1-3:3] {C:0} {A:{}}
| whiteSpace:   [3:4-3:4] {C:0} {A:{}}
| statement: main [3:5-3:8] {C:0} {A:{}}
| newLine: \\\\n [3:9-3:9] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello2.4gl program 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello2.4gl\\"
parserProcess: \\"program\\"
=====================================input======================================
001:main
002:call f1()
003:end main
004:
005:
006:
007:  --# fun��o 2
008:         function f1(a,    b,    c)
009:
010:       define nome char(50) # abc
011:       define big_field char(1234) # abc
012: prompt \\"digite seu nome : \\" for nome
013:
014: end function
015:
=====================================output=====================================
program:  [1:1-14:14] {C:1} {A:{}}
| block:  [1:1-3:12] {C:3} {A:{}}
| | beginBlock:  [1:1-1:5] {C:1} {A:{}}
| | | statement: main [1:1-1:4] {C:0} {A:{}}
| | | endLine: - [1:5-1:5] {C:0} {A:{}}
| | | -newLine: \\\\n [1:5-1:5] {C:0} {A:{}}
| | bodyBlock:  [1:1-2:10] {C:1} {A:{}}
| | | statement: call [2:1-2:4] {C:0} {A:{}}
| | | whiteSpace:   [2:5-2:5] {C:0} {A:{}}
| | | identifier: f1 [2:6-2:7] {C:0} {A:{}}
| | | operatorParenthesis: ( [2:8-2:8] {C:0} {A:{}}
| | | operatorParenthesis: ) [2:9-2:9] {C:0} {A:{}}
| | | newLine: \\\\n [2:10-2:10] {C:0} {A:{}}
| | endBlock:  [1:1-3:12] {C:1} {A:{}}
| | | statement: end [3:1-3:3] {C:0} {A:{}}
| | | whiteSpace:   [3:4-3:4] {C:0} {A:{}}
| | | statement: main [3:5-3:8] {C:0} {A:{}}
| | | endLine: - [3:9-3:12] {C:0} {A:{}}
| | | -newLine: \\\\n\\\\n\\\\n\\\\n [3:9-3:12] {C:0} {A:{}}
| whiteSpace:    [7:1-7:2] {C:0} {A:{}}
| comment: --# fun��o 2\\\\n [7:3-7:15] {C:0} {A:{}}
| whiteSpace:           [8:1-8:9] {C:0} {A:{}}
| block:  [8:10-14:14] {C:3} {A:{}}
| | beginBlock:  [8:10-8:37] {C:1} {A:{}}
| | | statement: function [8:10-8:17] {C:0} {A:{}}
| | | whiteSpace:   [8:18-8:18] {C:0} {A:{}}
| | | identifier: f1 [8:19-8:20] {C:0} {A:{}}
| | | argumentList:  [8:21-8:35] {C:1} {A:{}}
| | | | operatorParenthesis: ( [8:21-8:21] {C:0} {A:{}}
| | | | identifier: a [8:22-8:22] {C:0} {A:{}}
| | | | operatorSeparator: , [8:23-8:23] {C:0} {A:{}}
| | | | whiteSpace:      [8:24-8:27] {C:0} {A:{}}
| | | | identifier: b [8:28-8:28] {C:0} {A:{}}
| | | | operatorSeparator: , [8:29-8:29] {C:0} {A:{}}
| | | | whiteSpace:      [8:30-8:33] {C:0} {A:{}}
| | | | identifier: c [8:34-8:34] {C:0} {A:{}}
| | | | operatorParenthesis: ) [8:35-8:35] {C:0} {A:{}}
| | | endLine: - [8:36-8:37] {C:0} {A:{}}
| | | -newLine: \\\\n\\\\n [8:36-8:37] {C:0} {A:{}}
| | bodyBlock:  [8:10-14:1] {C:1} {A:{}}
| | | whiteSpace:         [10:1-10:7] {C:0} {A:{}}
| | | statement: define [10:8-10:13] {C:0} {A:{}}
| | | whiteSpace:   [10:14-10:14] {C:0} {A:{}}
| | | identifier: nome [10:15-10:18] {C:0} {A:{}}
| | | whiteSpace:   [10:19-10:19] {C:0} {A:{}}
| | | keyword: char [10:20-10:23] {C:0} {A:{}}
| | | operatorParenthesis: ( [10:24-10:24] {C:0} {A:{}}
| | | number: 50 [10:25-10:26] {C:0} {A:{}}
| | | operatorParenthesis: ) [10:27-10:27] {C:0} {A:{}}
| | | whiteSpace:   [10:28-10:28] {C:0} {A:{}}
| | | comment: # abc\\\\n [10:29-10:34] {C:0} {A:{}}
| | | whiteSpace:         [11:1-11:7] {C:0} {A:{}}
| | | statement: define [11:8-11:13] {C:0} {A:{}}
| | | whiteSpace:   [11:14-11:14] {C:0} {A:{}}
| | | identifier: big_field [11:15-11:23] {C:0} {A:{}}
| | | whiteSpace:   [11:24-11:24] {C:0} {A:{}}
| | | keyword: char [11:25-11:28] {C:0} {A:{}}
| | | operatorParenthesis: ( [11:29-11:29] {C:0} {A:{}}
| | | number: 1234 [11:30-11:33] {C:0} {A:{}}
| | | operatorParenthesis: ) [11:34-11:34] {C:0} {A:{}}
| | | whiteSpace:   [11:35-11:35] {C:0} {A:{}}
| | | comment: # abc\\\\n [11:36-11:41] {C:0} {A:{}}
| | | whiteSpace:   [12:1-12:1] {C:0} {A:{}}
| | | statement: prompt [12:2-12:7] {C:0} {A:{}}
| | | whiteSpace:   [12:8-12:8] {C:0} {A:{}}
| | | string: \\"digite seu nome : \\" [12:9-12:28] {C:0} {A:{}}
| | | whiteSpace:   [12:29-12:29] {C:0} {A:{}}
| | | statement: for [12:30-12:32] {C:0} {A:{}}
| | | whiteSpace:   [12:33-12:33] {C:0} {A:{}}
| | | identifier: nome [12:34-12:37] {C:0} {A:{}}
| | | newLine: \\\\n\\\\n [12:38-12:39] {C:0} {A:{}}
| | | whiteSpace:   [14:1-14:1] {C:0} {A:{}}
| | endBlock:  [8:10-14:14] {C:1} {A:{}}
| | | statement: end [14:2-14:4] {C:0} {A:{}}
| | | whiteSpace:   [14:5-14:5] {C:0} {A:{}}
| | | statement: function [14:6-14:13] {C:0} {A:{}}
| | | endLine: - [14:14-14:14] {C:0} {A:{}}
| | | -newLine: \\\\n [14:14-14:14] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello2.4gl token 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello2.4gl\\"
parserProcess: \\"token\\"
=====================================input======================================
001:main
002:call f1()
003:end main
004:
005:
006:
007:  --# fun��o 2
008:         function f1(a,    b,    c)
009:
010:       define nome char(50) # abc
011:       define big_field char(1234) # abc
012: prompt \\"digite seu nome : \\" for nome
013:
014: end function
015:
=====================================output=====================================
token:  [1:1-14:14] {C:1} {A:{}}
| statement: main [1:1-1:4] {C:0} {A:{}}
| newLine: \\\\n [1:5-1:5] {C:0} {A:{}}
| statement: call [2:1-2:4] {C:0} {A:{}}
| whiteSpace:   [2:5-2:5] {C:0} {A:{}}
| identifier: f1 [2:6-2:7] {C:0} {A:{}}
| operatorParenthesis: ( [2:8-2:8] {C:0} {A:{}}
| operatorParenthesis: ) [2:9-2:9] {C:0} {A:{}}
| newLine: \\\\n [2:10-2:10] {C:0} {A:{}}
| statement: end [3:1-3:3] {C:0} {A:{}}
| whiteSpace:   [3:4-3:4] {C:0} {A:{}}
| statement: main [3:5-3:8] {C:0} {A:{}}
| newLine: \\\\n\\\\n\\\\n\\\\n [3:9-3:12] {C:0} {A:{}}
| whiteSpace:    [7:1-7:2] {C:0} {A:{}}
| comment: --# fun��o 2\\\\n [7:3-7:15] {C:0} {A:{}}
| whiteSpace:           [8:1-8:9] {C:0} {A:{}}
| statement: function [8:10-8:17] {C:0} {A:{}}
| whiteSpace:   [8:18-8:18] {C:0} {A:{}}
| identifier: f1 [8:19-8:20] {C:0} {A:{}}
| operatorParenthesis: ( [8:21-8:21] {C:0} {A:{}}
| identifier: a [8:22-8:22] {C:0} {A:{}}
| operatorSeparator: , [8:23-8:23] {C:0} {A:{}}
| whiteSpace:      [8:24-8:27] {C:0} {A:{}}
| identifier: b [8:28-8:28] {C:0} {A:{}}
| operatorSeparator: , [8:29-8:29] {C:0} {A:{}}
| whiteSpace:      [8:30-8:33] {C:0} {A:{}}
| identifier: c [8:34-8:34] {C:0} {A:{}}
| operatorParenthesis: ) [8:35-8:35] {C:0} {A:{}}
| newLine: \\\\n\\\\n [8:36-8:37] {C:0} {A:{}}
| whiteSpace:         [10:1-10:7] {C:0} {A:{}}
| statement: define [10:8-10:13] {C:0} {A:{}}
| whiteSpace:   [10:14-10:14] {C:0} {A:{}}
| identifier: nome [10:15-10:18] {C:0} {A:{}}
| whiteSpace:   [10:19-10:19] {C:0} {A:{}}
| keyword: char [10:20-10:23] {C:0} {A:{}}
| operatorParenthesis: ( [10:24-10:24] {C:0} {A:{}}
| number: 50 [10:25-10:26] {C:0} {A:{}}
| operatorParenthesis: ) [10:27-10:27] {C:0} {A:{}}
| whiteSpace:   [10:28-10:28] {C:0} {A:{}}
| comment: # abc\\\\n [10:29-10:34] {C:0} {A:{}}
| whiteSpace:         [11:1-11:7] {C:0} {A:{}}
| statement: define [11:8-11:13] {C:0} {A:{}}
| whiteSpace:   [11:14-11:14] {C:0} {A:{}}
| identifier: big_field [11:15-11:23] {C:0} {A:{}}
| whiteSpace:   [11:24-11:24] {C:0} {A:{}}
| keyword: char [11:25-11:28] {C:0} {A:{}}
| operatorParenthesis: ( [11:29-11:29] {C:0} {A:{}}
| number: 1234 [11:30-11:33] {C:0} {A:{}}
| operatorParenthesis: ) [11:34-11:34] {C:0} {A:{}}
| whiteSpace:   [11:35-11:35] {C:0} {A:{}}
| comment: # abc\\\\n [11:36-11:41] {C:0} {A:{}}
| whiteSpace:   [12:1-12:1] {C:0} {A:{}}
| statement: prompt [12:2-12:7] {C:0} {A:{}}
| whiteSpace:   [12:8-12:8] {C:0} {A:{}}
| string: \\"digite seu nome : \\" [12:9-12:28] {C:0} {A:{}}
| whiteSpace:   [12:29-12:29] {C:0} {A:{}}
| statement: for [12:30-12:32] {C:0} {A:{}}
| whiteSpace:   [12:33-12:33] {C:0} {A:{}}
| identifier: nome [12:34-12:37] {C:0} {A:{}}
| newLine: \\\\n\\\\n [12:38-12:39] {C:0} {A:{}}
| whiteSpace:   [14:1-14:1] {C:0} {A:{}}
| statement: end [14:2-14:4] {C:0} {A:{}}
| whiteSpace:   [14:5-14:5] {C:0} {A:{}}
| statement: function [14:6-14:13] {C:0} {A:{}}
| newLine: \\\\n [14:14-14:14] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello3.4gl program 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello3.4gl\\"
parserProcess: \\"program\\"
=====================================input======================================
001:
=====================================output=====================================
program:  [1:1--Infinity:-Infinity] {C:1} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello3.4gl token 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello3.4gl\\"
parserProcess: \\"token\\"
=====================================input======================================
001:
=====================================output=====================================
token:  [1:1--Infinity:-Infinity] {C:1} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello4.4gl program 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello4.4gl\\"
parserProcess: \\"program\\"
=====================================input======================================
001:main
002:	define l_ind smallint
003:	define ma_char array[5] of char(3)
004:
005:--#	define ma_integer array[3] of integer
006:
007:	define ma_array array [3] of record
008:	f2_check      char(1),
009:	f2_integer    integer,
010:	f2_smallint   smallint,
011:	f2_decimal    decimal(17,6),
012:	f2_decimal0   decimal(10,0),
013:	f2_char       char(10),
014:	f2_date       date,
015:	f2_dttime_y2s datetime year to second,
016:	f2_dttime_y2m datetime year to month,
017:	f2_dttime_y2f datetime year to fraction(3),
018:	f2_scroll     char(100),
019:	f2_varchar    varchar(20)
020:
021:end record
022:
023:
024:initialize ma_array to null
025:initialize ma_integer to null
026:
027:
028:display \\"hello world\\"
029:
030:call _arraydeleteitem(ma_array)
031:call _arrayadditem(ma_array,3)
032:
033:call _arraydeleteitem(ma_integer)
034:call _arrayadditem(ma_integer,3)
035:
036:for l_ind = 1 to 3
037:	let ma_integer[l_ind] = null
038:
039:	let ma_array[l_ind].f2_check      = null
040:	let ma_array[l_ind].f2_integer    = null
041:	let ma_array[l_ind].f2_smallint   = null
042:	let ma_array[l_ind].f2_decimal    = null
043:	let ma_array[l_ind].f2_decimal0   = null
044:	let ma_array[l_ind].f2_char       = \\" \\"
045:	let ma_array[l_ind].f2_varchar    = \\" \\"
046:	let ma_array[l_ind].f2_date       = today + l_ind units day
047:	let ma_array[l_ind].f2_dttime_y2s = null
048:	let ma_array[l_ind].f2_dttime_y2m = null
049:	let ma_array[l_ind].f2_dttime_y2f = null
050:	let ma_array[l_ind].f2_scroll     = null
051:
052:end for
053:
054:for l_ind = 1 to 3
055:	let ma_integer[l_ind] = l_ind
056:
057:	let ma_array[l_ind].f2_check      = \\"s\\"
058:	let ma_array[l_ind].f2_integer    = 339782827 + l_ind
059:	let ma_array[l_ind].f2_smallint   = 18721 + l_ind
060:	let ma_array[l_ind].f2_decimal    = -19838849.087712 + l_ind
061:	let ma_array[l_ind].f2_decimal0   = 9389007739 + l_ind
062:	let ma_array[l_ind].f2_char       = \\"texto\\"||l_ind
063:	let ma_array[l_ind].f2_varchar    = \\"textovarchar   \\"||l_ind
064:	let ma_array[l_ind].f2_date       = today + 3 units day
065:	let ma_array[l_ind].f2_dttime_y2s = current + l_ind units day
066:	let ma_array[l_ind].f2_dttime_y2m = current + l_ind + 1 units day
067:	let ma_array[l_ind].f2_dttime_y2f = current + l_ind + 2 units day
068:	let ma_array[l_ind].f2_scroll     = \\"texto scroll texto scroll texto scroll \\"
069:end for
070:
071:
072:end main
073:
=====================================output=====================================
program:  [1:1-72:9] {C:1} {A:{}}
| block:  [1:1-72:9] {C:3} {A:{}}
| | beginBlock:  [1:1-1:5] {C:1} {A:{}}
| | | statement: main [1:1-1:4] {C:0} {A:{}}
| | | endLine: - [1:5-1:5] {C:0} {A:{}}
| | | -newLine: \\\\n [1:5-1:5] {C:0} {A:{}}
| | bodyBlock:  [1:1-69:10] {C:1} {A:{}}
| | | whiteSpace: \\\\t [2:1-2:1] {C:0} {A:{}}
| | | statement: define [2:2-2:7] {C:0} {A:{}}
| | | whiteSpace:   [2:8-2:8] {C:0} {A:{}}
| | | identifier: l_ind [2:9-2:13] {C:0} {A:{}}
| | | whiteSpace:   [2:14-2:14] {C:0} {A:{}}
| | | keyword: smallint [2:15-2:22] {C:0} {A:{}}
| | | newLine: \\\\n [2:23-2:23] {C:0} {A:{}}
| | | whiteSpace: \\\\t [3:1-3:1] {C:0} {A:{}}
| | | statement: define [3:2-3:7] {C:0} {A:{}}
| | | whiteSpace:   [3:8-3:8] {C:0} {A:{}}
| | | identifier: ma_char [3:9-3:15] {C:0} {A:{}}
| | | whiteSpace:   [3:16-3:16] {C:0} {A:{}}
| | | keyword: array [3:17-3:21] {C:0} {A:{}}
| | | operatorBracket: [ [3:22-3:22] {C:0} {A:{}}
| | | number: 5 [3:23-3:23] {C:0} {A:{}}
| | | operatorBracket: ] [3:24-3:24] {C:0} {A:{}}
| | | whiteSpace:   [3:25-3:25] {C:0} {A:{}}
| | | keyword: of [3:26-3:27] {C:0} {A:{}}
| | | whiteSpace:   [3:28-3:28] {C:0} {A:{}}
| | | keyword: char [3:29-3:32] {C:0} {A:{}}
| | | operatorParenthesis: ( [3:33-3:33] {C:0} {A:{}}
| | | number: 3 [3:34-3:34] {C:0} {A:{}}
| | | operatorParenthesis: ) [3:35-3:35] {C:0} {A:{}}
| | | newLine: \\\\n\\\\n [3:36-3:37] {C:0} {A:{}}
| | | comment: --#\\\\tdefine ma_integer array[3] of integer\\\\n\\\\n [5:1-5:43] {C:0} {A:{}}
| | | whiteSpace: \\\\t [7:1-7:1] {C:0} {A:{}}
| | | statement: define [7:2-7:7] {C:0} {A:{}}
| | | whiteSpace:   [7:8-7:8] {C:0} {A:{}}
| | | identifier: ma_array [7:9-7:16] {C:0} {A:{}}
| | | whiteSpace:   [7:17-7:17] {C:0} {A:{}}
| | | keyword: array [7:18-7:22] {C:0} {A:{}}
| | | whiteSpace:   [7:23-7:23] {C:0} {A:{}}
| | | operatorBracket: [ [7:24-7:24] {C:0} {A:{}}
| | | number: 3 [7:25-7:25] {C:0} {A:{}}
| | | operatorBracket: ] [7:26-7:26] {C:0} {A:{}}
| | | whiteSpace:   [7:27-7:27] {C:0} {A:{}}
| | | keyword: of [7:28-7:29] {C:0} {A:{}}
| | | whiteSpace:   [7:30-7:30] {C:0} {A:{}}
| | | block:  [7:31-21:13] {C:3} {A:{\\"recordBlock\\":true}}
| | | | beginBlock:  [7:31-7:36] {C:1} {A:{}}
| | | | | keyword: record [7:31-7:36] {C:0} {A:{}}
| | | | bodyBlock:  [7:31-19:28] {C:1} {A:{}}
| | | | | newLine: \\\\n [7:37-7:37] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [8:1-8:1] {C:0} {A:{}}
| | | | | identifier: f2_check [8:2-8:9] {C:0} {A:{}}
| | | | | whiteSpace:        [8:10-8:15] {C:0} {A:{}}
| | | | | keyword: char [8:16-8:19] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [8:20-8:20] {C:0} {A:{}}
| | | | | number: 1 [8:21-8:21] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [8:22-8:22] {C:0} {A:{}}
| | | | | operatorSeparator: , [8:23-8:23] {C:0} {A:{}}
| | | | | newLine: \\\\n [8:24-8:24] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [9:1-9:1] {C:0} {A:{}}
| | | | | identifier: f2_integer [9:2-9:11] {C:0} {A:{}}
| | | | | whiteSpace:      [9:12-9:15] {C:0} {A:{}}
| | | | | keyword: integer [9:16-9:22] {C:0} {A:{}}
| | | | | operatorSeparator: , [9:23-9:23] {C:0} {A:{}}
| | | | | newLine: \\\\n [9:24-9:24] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [10:1-10:1] {C:0} {A:{}}
| | | | | identifier: f2_smallint [10:2-10:12] {C:0} {A:{}}
| | | | | whiteSpace:     [10:13-10:15] {C:0} {A:{}}
| | | | | keyword: smallint [10:16-10:23] {C:0} {A:{}}
| | | | | operatorSeparator: , [10:24-10:24] {C:0} {A:{}}
| | | | | newLine: \\\\n [10:25-10:25] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [11:1-11:1] {C:0} {A:{}}
| | | | | identifier: f2_decimal [11:2-11:11] {C:0} {A:{}}
| | | | | whiteSpace:      [11:12-11:15] {C:0} {A:{}}
| | | | | keyword: decimal [11:16-11:22] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [11:23-11:23] {C:0} {A:{}}
| | | | | number: 17 [11:24-11:25] {C:0} {A:{}}
| | | | | operatorSeparator: , [11:26-11:26] {C:0} {A:{}}
| | | | | number: 6 [11:27-11:27] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [11:28-11:28] {C:0} {A:{}}
| | | | | operatorSeparator: , [11:29-11:29] {C:0} {A:{}}
| | | | | newLine: \\\\n [11:30-11:30] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [12:1-12:1] {C:0} {A:{}}
| | | | | identifier: f2_decimal0 [12:2-12:12] {C:0} {A:{}}
| | | | | whiteSpace:     [12:13-12:15] {C:0} {A:{}}
| | | | | keyword: decimal [12:16-12:22] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [12:23-12:23] {C:0} {A:{}}
| | | | | number: 10 [12:24-12:25] {C:0} {A:{}}
| | | | | operatorSeparator: , [12:26-12:26] {C:0} {A:{}}
| | | | | number: 0 [12:27-12:27] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [12:28-12:28] {C:0} {A:{}}
| | | | | operatorSeparator: , [12:29-12:29] {C:0} {A:{}}
| | | | | newLine: \\\\n [12:30-12:30] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [13:1-13:1] {C:0} {A:{}}
| | | | | identifier: f2_char [13:2-13:8] {C:0} {A:{}}
| | | | | whiteSpace:         [13:9-13:15] {C:0} {A:{}}
| | | | | keyword: char [13:16-13:19] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [13:20-13:20] {C:0} {A:{}}
| | | | | number: 10 [13:21-13:22] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [13:23-13:23] {C:0} {A:{}}
| | | | | operatorSeparator: , [13:24-13:24] {C:0} {A:{}}
| | | | | newLine: \\\\n [13:25-13:25] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [14:1-14:1] {C:0} {A:{}}
| | | | | identifier: f2_date [14:2-14:8] {C:0} {A:{}}
| | | | | whiteSpace:         [14:9-14:15] {C:0} {A:{}}
| | | | | keyword: date [14:16-14:19] {C:0} {A:{}}
| | | | | operatorSeparator: , [14:20-14:20] {C:0} {A:{}}
| | | | | newLine: \\\\n [14:21-14:21] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [15:1-15:1] {C:0} {A:{}}
| | | | | identifier: f2_dttime_y2s [15:2-15:14] {C:0} {A:{}}
| | | | | whiteSpace:   [15:15-15:15] {C:0} {A:{}}
| | | | | keyword: datetime [15:16-15:23] {C:0} {A:{}}
| | | | | whiteSpace:   [15:24-15:24] {C:0} {A:{}}
| | | | | keyword: year [15:25-15:28] {C:0} {A:{}}
| | | | | whiteSpace:   [15:29-15:29] {C:0} {A:{}}
| | | | | keyword: to [15:30-15:31] {C:0} {A:{}}
| | | | | whiteSpace:   [15:32-15:32] {C:0} {A:{}}
| | | | | keyword: second [15:33-15:38] {C:0} {A:{}}
| | | | | operatorSeparator: , [15:39-15:39] {C:0} {A:{}}
| | | | | newLine: \\\\n [15:40-15:40] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [16:1-16:1] {C:0} {A:{}}
| | | | | identifier: f2_dttime_y2m [16:2-16:14] {C:0} {A:{}}
| | | | | whiteSpace:   [16:15-16:15] {C:0} {A:{}}
| | | | | keyword: datetime [16:16-16:23] {C:0} {A:{}}
| | | | | whiteSpace:   [16:24-16:24] {C:0} {A:{}}
| | | | | keyword: year [16:25-16:28] {C:0} {A:{}}
| | | | | whiteSpace:   [16:29-16:29] {C:0} {A:{}}
| | | | | keyword: to [16:30-16:31] {C:0} {A:{}}
| | | | | whiteSpace:   [16:32-16:32] {C:0} {A:{}}
| | | | | keyword: month [16:33-16:37] {C:0} {A:{}}
| | | | | operatorSeparator: , [16:38-16:38] {C:0} {A:{}}
| | | | | newLine: \\\\n [16:39-16:39] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [17:1-17:1] {C:0} {A:{}}
| | | | | identifier: f2_dttime_y2f [17:2-17:14] {C:0} {A:{}}
| | | | | whiteSpace:   [17:15-17:15] {C:0} {A:{}}
| | | | | keyword: datetime [17:16-17:23] {C:0} {A:{}}
| | | | | whiteSpace:   [17:24-17:24] {C:0} {A:{}}
| | | | | keyword: year [17:25-17:28] {C:0} {A:{}}
| | | | | whiteSpace:   [17:29-17:29] {C:0} {A:{}}
| | | | | keyword: to [17:30-17:31] {C:0} {A:{}}
| | | | | whiteSpace:   [17:32-17:32] {C:0} {A:{}}
| | | | | keyword: fraction [17:33-17:40] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [17:41-17:41] {C:0} {A:{}}
| | | | | number: 3 [17:42-17:42] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [17:43-17:43] {C:0} {A:{}}
| | | | | operatorSeparator: , [17:44-17:44] {C:0} {A:{}}
| | | | | newLine: \\\\n [17:45-17:45] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [18:1-18:1] {C:0} {A:{}}
| | | | | identifier: f2_scroll [18:2-18:10] {C:0} {A:{}}
| | | | | whiteSpace:       [18:11-18:15] {C:0} {A:{}}
| | | | | keyword: char [18:16-18:19] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [18:20-18:20] {C:0} {A:{}}
| | | | | number: 100 [18:21-18:23] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [18:24-18:24] {C:0} {A:{}}
| | | | | operatorSeparator: , [18:25-18:25] {C:0} {A:{}}
| | | | | newLine: \\\\n [18:26-18:26] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [19:1-19:1] {C:0} {A:{}}
| | | | | identifier: f2_varchar [19:2-19:11] {C:0} {A:{}}
| | | | | whiteSpace:      [19:12-19:15] {C:0} {A:{}}
| | | | | keyword: varchar [19:16-19:22] {C:0} {A:{}}
| | | | | operatorParenthesis: ( [19:23-19:23] {C:0} {A:{}}
| | | | | number: 20 [19:24-19:25] {C:0} {A:{}}
| | | | | operatorParenthesis: ) [19:26-19:26] {C:0} {A:{}}
| | | | | newLine: \\\\n\\\\n [19:27-19:28] {C:0} {A:{}}
| | | | endBlock:  [7:31-21:13] {C:1} {A:{}}
| | | | | statement: end [21:1-21:3] {C:0} {A:{}}
| | | | | whiteSpace:   [21:4-21:4] {C:0} {A:{}}
| | | | | keyword: record [21:5-21:10] {C:0} {A:{}}
| | | | | endLine: - [21:11-21:13] {C:0} {A:{}}
| | | | | -newLine: \\\\n\\\\n\\\\n [21:11-21:13] {C:0} {A:{}}
| | | statement: initialize [24:1-24:10] {C:0} {A:{}}
| | | whiteSpace:   [24:11-24:11] {C:0} {A:{}}
| | | identifier: ma_array [24:12-24:19] {C:0} {A:{}}
| | | whiteSpace:   [24:20-24:20] {C:0} {A:{}}
| | | keyword: to [24:21-24:22] {C:0} {A:{}}
| | | whiteSpace:   [24:23-24:23] {C:0} {A:{}}
| | | keyword: null [24:24-24:27] {C:0} {A:{}}
| | | newLine: \\\\n [24:28-24:28] {C:0} {A:{}}
| | | statement: initialize [25:1-25:10] {C:0} {A:{}}
| | | whiteSpace:   [25:11-25:11] {C:0} {A:{}}
| | | identifier: ma_integer [25:12-25:21] {C:0} {A:{}}
| | | whiteSpace:   [25:22-25:22] {C:0} {A:{}}
| | | keyword: to [25:23-25:24] {C:0} {A:{}}
| | | whiteSpace:   [25:25-25:25] {C:0} {A:{}}
| | | keyword: null [25:26-25:29] {C:0} {A:{}}
| | | newLine: \\\\n\\\\n\\\\n [25:30-25:32] {C:0} {A:{}}
| | | statement: display [28:1-28:7] {C:0} {A:{}}
| | | whiteSpace:   [28:8-28:8] {C:0} {A:{}}
| | | string: \\"hello world\\" [28:9-28:21] {C:0} {A:{}}
| | | newLine: \\\\n\\\\n [28:22-28:23] {C:0} {A:{}}
| | | statement: call [30:1-30:4] {C:0} {A:{}}
| | | whiteSpace:   [30:5-30:5] {C:0} {A:{}}
| | | identifier: _arraydeleteitem [30:6-30:21] {C:0} {A:{}}
| | | operatorParenthesis: ( [30:22-30:22] {C:0} {A:{}}
| | | identifier: ma_array [30:23-30:30] {C:0} {A:{}}
| | | operatorParenthesis: ) [30:31-30:31] {C:0} {A:{}}
| | | newLine: \\\\n [30:32-30:32] {C:0} {A:{}}
| | | statement: call [31:1-31:4] {C:0} {A:{}}
| | | whiteSpace:   [31:5-31:5] {C:0} {A:{}}
| | | identifier: _arrayadditem [31:6-31:18] {C:0} {A:{}}
| | | operatorParenthesis: ( [31:19-31:19] {C:0} {A:{}}
| | | identifier: ma_array [31:20-31:27] {C:0} {A:{}}
| | | operatorSeparator: , [31:28-31:28] {C:0} {A:{}}
| | | number: 3 [31:29-31:29] {C:0} {A:{}}
| | | operatorParenthesis: ) [31:30-31:30] {C:0} {A:{}}
| | | newLine: \\\\n\\\\n [31:31-31:32] {C:0} {A:{}}
| | | statement: call [33:1-33:4] {C:0} {A:{}}
| | | whiteSpace:   [33:5-33:5] {C:0} {A:{}}
| | | identifier: _arraydeleteitem [33:6-33:21] {C:0} {A:{}}
| | | operatorParenthesis: ( [33:22-33:22] {C:0} {A:{}}
| | | identifier: ma_integer [33:23-33:32] {C:0} {A:{}}
| | | operatorParenthesis: ) [33:33-33:33] {C:0} {A:{}}
| | | newLine: \\\\n [33:34-33:34] {C:0} {A:{}}
| | | statement: call [34:1-34:4] {C:0} {A:{}}
| | | whiteSpace:   [34:5-34:5] {C:0} {A:{}}
| | | identifier: _arrayadditem [34:6-34:18] {C:0} {A:{}}
| | | operatorParenthesis: ( [34:19-34:19] {C:0} {A:{}}
| | | identifier: ma_integer [34:20-34:29] {C:0} {A:{}}
| | | operatorSeparator: , [34:30-34:30] {C:0} {A:{}}
| | | number: 3 [34:31-34:31] {C:0} {A:{}}
| | | operatorParenthesis: ) [34:32-34:32] {C:0} {A:{}}
| | | newLine: \\\\n\\\\n [34:33-34:34] {C:0} {A:{}}
| | | block:  [36:1-52:9] {C:3} {A:{}}
| | | | beginBlock:  [36:1-36:3] {C:1} {A:{}}
| | | | | statement: for [36:1-36:3] {C:0} {A:{}}
| | | | bodyBlock:  [36:1-50:43] {C:1} {A:{}}
| | | | | whiteSpace:   [36:4-36:4] {C:0} {A:{}}
| | | | | identifier: l_ind [36:5-36:9] {C:0} {A:{}}
| | | | | whiteSpace:   [36:10-36:10] {C:0} {A:{}}
| | | | | operatorMath: = [36:11-36:11] {C:0} {A:{}}
| | | | | whiteSpace:   [36:12-36:12] {C:0} {A:{}}
| | | | | number: 1 [36:13-36:13] {C:0} {A:{}}
| | | | | whiteSpace:   [36:14-36:14] {C:0} {A:{}}
| | | | | keyword: to [36:15-36:16] {C:0} {A:{}}
| | | | | whiteSpace:   [36:17-36:17] {C:0} {A:{}}
| | | | | number: 3 [36:18-36:18] {C:0} {A:{}}
| | | | | newLine: \\\\n [36:19-36:19] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [37:1-37:1] {C:0} {A:{}}
| | | | | statement: let [37:2-37:4] {C:0} {A:{}}
| | | | | whiteSpace:   [37:5-37:5] {C:0} {A:{}}
| | | | | identifier: ma_integer [37:6-37:15] {C:0} {A:{}}
| | | | | operatorBracket: [ [37:16-37:16] {C:0} {A:{}}
| | | | | identifier: l_ind [37:17-37:21] {C:0} {A:{}}
| | | | | operatorBracket: ] [37:22-37:22] {C:0} {A:{}}
| | | | | whiteSpace:   [37:23-37:23] {C:0} {A:{}}
| | | | | operatorMath: = [37:24-37:24] {C:0} {A:{}}
| | | | | whiteSpace:   [37:25-37:25] {C:0} {A:{}}
| | | | | keyword: null [37:26-37:29] {C:0} {A:{}}
| | | | | newLine: \\\\n\\\\n [37:30-37:31] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [39:1-39:1] {C:0} {A:{}}
| | | | | statement: let [39:2-39:4] {C:0} {A:{}}
| | | | | whiteSpace:   [39:5-39:5] {C:0} {A:{}}
| | | | | identifier: ma_array [39:6-39:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [39:14-39:14] {C:0} {A:{}}
| | | | | identifier: l_ind [39:15-39:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [39:20-39:20] {C:0} {A:{}}
| | | | | identifier: .f2_check [39:21-39:29] {C:0} {A:{}}
| | | | | whiteSpace:        [39:30-39:35] {C:0} {A:{}}
| | | | | operatorMath: = [39:36-39:36] {C:0} {A:{}}
| | | | | whiteSpace:   [39:37-39:37] {C:0} {A:{}}
| | | | | keyword: null [39:38-39:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [39:42-39:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [40:1-40:1] {C:0} {A:{}}
| | | | | statement: let [40:2-40:4] {C:0} {A:{}}
| | | | | whiteSpace:   [40:5-40:5] {C:0} {A:{}}
| | | | | identifier: ma_array [40:6-40:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [40:14-40:14] {C:0} {A:{}}
| | | | | identifier: l_ind [40:15-40:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [40:20-40:20] {C:0} {A:{}}
| | | | | identifier: .f2_integer [40:21-40:31] {C:0} {A:{}}
| | | | | whiteSpace:      [40:32-40:35] {C:0} {A:{}}
| | | | | operatorMath: = [40:36-40:36] {C:0} {A:{}}
| | | | | whiteSpace:   [40:37-40:37] {C:0} {A:{}}
| | | | | keyword: null [40:38-40:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [40:42-40:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [41:1-41:1] {C:0} {A:{}}
| | | | | statement: let [41:2-41:4] {C:0} {A:{}}
| | | | | whiteSpace:   [41:5-41:5] {C:0} {A:{}}
| | | | | identifier: ma_array [41:6-41:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [41:14-41:14] {C:0} {A:{}}
| | | | | identifier: l_ind [41:15-41:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [41:20-41:20] {C:0} {A:{}}
| | | | | identifier: .f2_smallint [41:21-41:32] {C:0} {A:{}}
| | | | | whiteSpace:     [41:33-41:35] {C:0} {A:{}}
| | | | | operatorMath: = [41:36-41:36] {C:0} {A:{}}
| | | | | whiteSpace:   [41:37-41:37] {C:0} {A:{}}
| | | | | keyword: null [41:38-41:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [41:42-41:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [42:1-42:1] {C:0} {A:{}}
| | | | | statement: let [42:2-42:4] {C:0} {A:{}}
| | | | | whiteSpace:   [42:5-42:5] {C:0} {A:{}}
| | | | | identifier: ma_array [42:6-42:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [42:14-42:14] {C:0} {A:{}}
| | | | | identifier: l_ind [42:15-42:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [42:20-42:20] {C:0} {A:{}}
| | | | | identifier: .f2_decimal [42:21-42:31] {C:0} {A:{}}
| | | | | whiteSpace:      [42:32-42:35] {C:0} {A:{}}
| | | | | operatorMath: = [42:36-42:36] {C:0} {A:{}}
| | | | | whiteSpace:   [42:37-42:37] {C:0} {A:{}}
| | | | | keyword: null [42:38-42:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [42:42-42:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [43:1-43:1] {C:0} {A:{}}
| | | | | statement: let [43:2-43:4] {C:0} {A:{}}
| | | | | whiteSpace:   [43:5-43:5] {C:0} {A:{}}
| | | | | identifier: ma_array [43:6-43:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [43:14-43:14] {C:0} {A:{}}
| | | | | identifier: l_ind [43:15-43:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [43:20-43:20] {C:0} {A:{}}
| | | | | identifier: .f2_decimal0 [43:21-43:32] {C:0} {A:{}}
| | | | | whiteSpace:     [43:33-43:35] {C:0} {A:{}}
| | | | | operatorMath: = [43:36-43:36] {C:0} {A:{}}
| | | | | whiteSpace:   [43:37-43:37] {C:0} {A:{}}
| | | | | keyword: null [43:38-43:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [43:42-43:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [44:1-44:1] {C:0} {A:{}}
| | | | | statement: let [44:2-44:4] {C:0} {A:{}}
| | | | | whiteSpace:   [44:5-44:5] {C:0} {A:{}}
| | | | | identifier: ma_array [44:6-44:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [44:14-44:14] {C:0} {A:{}}
| | | | | identifier: l_ind [44:15-44:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [44:20-44:20] {C:0} {A:{}}
| | | | | identifier: .f2_char [44:21-44:28] {C:0} {A:{}}
| | | | | whiteSpace:         [44:29-44:35] {C:0} {A:{}}
| | | | | operatorMath: = [44:36-44:36] {C:0} {A:{}}
| | | | | whiteSpace:   [44:37-44:37] {C:0} {A:{}}
| | | | | string: \\" \\" [44:38-44:40] {C:0} {A:{}}
| | | | | newLine: \\\\n [44:41-44:41] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [45:1-45:1] {C:0} {A:{}}
| | | | | statement: let [45:2-45:4] {C:0} {A:{}}
| | | | | whiteSpace:   [45:5-45:5] {C:0} {A:{}}
| | | | | identifier: ma_array [45:6-45:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [45:14-45:14] {C:0} {A:{}}
| | | | | identifier: l_ind [45:15-45:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [45:20-45:20] {C:0} {A:{}}
| | | | | identifier: .f2_varchar [45:21-45:31] {C:0} {A:{}}
| | | | | whiteSpace:      [45:32-45:35] {C:0} {A:{}}
| | | | | operatorMath: = [45:36-45:36] {C:0} {A:{}}
| | | | | whiteSpace:   [45:37-45:37] {C:0} {A:{}}
| | | | | string: \\" \\" [45:38-45:40] {C:0} {A:{}}
| | | | | newLine: \\\\n [45:41-45:41] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [46:1-46:1] {C:0} {A:{}}
| | | | | statement: let [46:2-46:4] {C:0} {A:{}}
| | | | | whiteSpace:   [46:5-46:5] {C:0} {A:{}}
| | | | | identifier: ma_array [46:6-46:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [46:14-46:14] {C:0} {A:{}}
| | | | | identifier: l_ind [46:15-46:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [46:20-46:20] {C:0} {A:{}}
| | | | | identifier: .f2_date [46:21-46:28] {C:0} {A:{}}
| | | | | whiteSpace:         [46:29-46:35] {C:0} {A:{}}
| | | | | operatorMath: = [46:36-46:36] {C:0} {A:{}}
| | | | | whiteSpace:   [46:37-46:37] {C:0} {A:{}}
| | | | | keyword: today [46:38-46:42] {C:0} {A:{}}
| | | | | whiteSpace:   [46:43-46:43] {C:0} {A:{}}
| | | | | operatorMath: + [46:44-46:44] {C:0} {A:{}}
| | | | | whiteSpace:   [46:45-46:45] {C:0} {A:{}}
| | | | | identifier: l_ind [46:46-46:50] {C:0} {A:{}}
| | | | | whiteSpace:   [46:51-46:51] {C:0} {A:{}}
| | | | | keyword: units [46:52-46:56] {C:0} {A:{}}
| | | | | whiteSpace:   [46:57-46:57] {C:0} {A:{}}
| | | | | keyword: day [46:58-46:60] {C:0} {A:{}}
| | | | | newLine: \\\\n [46:61-46:61] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [47:1-47:1] {C:0} {A:{}}
| | | | | statement: let [47:2-47:4] {C:0} {A:{}}
| | | | | whiteSpace:   [47:5-47:5] {C:0} {A:{}}
| | | | | identifier: ma_array [47:6-47:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [47:14-47:14] {C:0} {A:{}}
| | | | | identifier: l_ind [47:15-47:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [47:20-47:20] {C:0} {A:{}}
| | | | | identifier: .f2_dttime_y2s [47:21-47:34] {C:0} {A:{}}
| | | | | whiteSpace:   [47:35-47:35] {C:0} {A:{}}
| | | | | operatorMath: = [47:36-47:36] {C:0} {A:{}}
| | | | | whiteSpace:   [47:37-47:37] {C:0} {A:{}}
| | | | | keyword: null [47:38-47:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [47:42-47:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [48:1-48:1] {C:0} {A:{}}
| | | | | statement: let [48:2-48:4] {C:0} {A:{}}
| | | | | whiteSpace:   [48:5-48:5] {C:0} {A:{}}
| | | | | identifier: ma_array [48:6-48:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [48:14-48:14] {C:0} {A:{}}
| | | | | identifier: l_ind [48:15-48:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [48:20-48:20] {C:0} {A:{}}
| | | | | identifier: .f2_dttime_y2m [48:21-48:34] {C:0} {A:{}}
| | | | | whiteSpace:   [48:35-48:35] {C:0} {A:{}}
| | | | | operatorMath: = [48:36-48:36] {C:0} {A:{}}
| | | | | whiteSpace:   [48:37-48:37] {C:0} {A:{}}
| | | | | keyword: null [48:38-48:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [48:42-48:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [49:1-49:1] {C:0} {A:{}}
| | | | | statement: let [49:2-49:4] {C:0} {A:{}}
| | | | | whiteSpace:   [49:5-49:5] {C:0} {A:{}}
| | | | | identifier: ma_array [49:6-49:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [49:14-49:14] {C:0} {A:{}}
| | | | | identifier: l_ind [49:15-49:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [49:20-49:20] {C:0} {A:{}}
| | | | | identifier: .f2_dttime_y2f [49:21-49:34] {C:0} {A:{}}
| | | | | whiteSpace:   [49:35-49:35] {C:0} {A:{}}
| | | | | operatorMath: = [49:36-49:36] {C:0} {A:{}}
| | | | | whiteSpace:   [49:37-49:37] {C:0} {A:{}}
| | | | | keyword: null [49:38-49:41] {C:0} {A:{}}
| | | | | newLine: \\\\n [49:42-49:42] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [50:1-50:1] {C:0} {A:{}}
| | | | | statement: let [50:2-50:4] {C:0} {A:{}}
| | | | | whiteSpace:   [50:5-50:5] {C:0} {A:{}}
| | | | | identifier: ma_array [50:6-50:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [50:14-50:14] {C:0} {A:{}}
| | | | | identifier: l_ind [50:15-50:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [50:20-50:20] {C:0} {A:{}}
| | | | | identifier: .f2_scroll [50:21-50:30] {C:0} {A:{}}
| | | | | whiteSpace:       [50:31-50:35] {C:0} {A:{}}
| | | | | operatorMath: = [50:36-50:36] {C:0} {A:{}}
| | | | | whiteSpace:   [50:37-50:37] {C:0} {A:{}}
| | | | | keyword: null [50:38-50:41] {C:0} {A:{}}
| | | | | newLine: \\\\n\\\\n [50:42-50:43] {C:0} {A:{}}
| | | | endBlock:  [36:1-52:9] {C:1} {A:{}}
| | | | | statement: end [52:1-52:3] {C:0} {A:{}}
| | | | | whiteSpace:   [52:4-52:4] {C:0} {A:{}}
| | | | | statement: for [52:5-52:7] {C:0} {A:{}}
| | | | | endLine: - [52:8-52:9] {C:0} {A:{}}
| | | | | -newLine: \\\\n\\\\n [52:8-52:9] {C:0} {A:{}}
| | | block:  [54:1-69:10] {C:3} {A:{}}
| | | | beginBlock:  [54:1-54:3] {C:1} {A:{}}
| | | | | statement: for [54:1-54:3] {C:0} {A:{}}
| | | | bodyBlock:  [54:1-68:79] {C:1} {A:{}}
| | | | | whiteSpace:   [54:4-54:4] {C:0} {A:{}}
| | | | | identifier: l_ind [54:5-54:9] {C:0} {A:{}}
| | | | | whiteSpace:   [54:10-54:10] {C:0} {A:{}}
| | | | | operatorMath: = [54:11-54:11] {C:0} {A:{}}
| | | | | whiteSpace:   [54:12-54:12] {C:0} {A:{}}
| | | | | number: 1 [54:13-54:13] {C:0} {A:{}}
| | | | | whiteSpace:   [54:14-54:14] {C:0} {A:{}}
| | | | | keyword: to [54:15-54:16] {C:0} {A:{}}
| | | | | whiteSpace:   [54:17-54:17] {C:0} {A:{}}
| | | | | number: 3 [54:18-54:18] {C:0} {A:{}}
| | | | | newLine: \\\\n [54:19-54:19] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [55:1-55:1] {C:0} {A:{}}
| | | | | statement: let [55:2-55:4] {C:0} {A:{}}
| | | | | whiteSpace:   [55:5-55:5] {C:0} {A:{}}
| | | | | identifier: ma_integer [55:6-55:15] {C:0} {A:{}}
| | | | | operatorBracket: [ [55:16-55:16] {C:0} {A:{}}
| | | | | identifier: l_ind [55:17-55:21] {C:0} {A:{}}
| | | | | operatorBracket: ] [55:22-55:22] {C:0} {A:{}}
| | | | | whiteSpace:   [55:23-55:23] {C:0} {A:{}}
| | | | | operatorMath: = [55:24-55:24] {C:0} {A:{}}
| | | | | whiteSpace:   [55:25-55:25] {C:0} {A:{}}
| | | | | identifier: l_ind [55:26-55:30] {C:0} {A:{}}
| | | | | newLine: \\\\n\\\\n [55:31-55:32] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [57:1-57:1] {C:0} {A:{}}
| | | | | statement: let [57:2-57:4] {C:0} {A:{}}
| | | | | whiteSpace:   [57:5-57:5] {C:0} {A:{}}
| | | | | identifier: ma_array [57:6-57:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [57:14-57:14] {C:0} {A:{}}
| | | | | identifier: l_ind [57:15-57:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [57:20-57:20] {C:0} {A:{}}
| | | | | identifier: .f2_check [57:21-57:29] {C:0} {A:{}}
| | | | | whiteSpace:        [57:30-57:35] {C:0} {A:{}}
| | | | | operatorMath: = [57:36-57:36] {C:0} {A:{}}
| | | | | whiteSpace:   [57:37-57:37] {C:0} {A:{}}
| | | | | string: \\"s\\" [57:38-57:40] {C:0} {A:{}}
| | | | | newLine: \\\\n [57:41-57:41] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [58:1-58:1] {C:0} {A:{}}
| | | | | statement: let [58:2-58:4] {C:0} {A:{}}
| | | | | whiteSpace:   [58:5-58:5] {C:0} {A:{}}
| | | | | identifier: ma_array [58:6-58:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [58:14-58:14] {C:0} {A:{}}
| | | | | identifier: l_ind [58:15-58:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [58:20-58:20] {C:0} {A:{}}
| | | | | identifier: .f2_integer [58:21-58:31] {C:0} {A:{}}
| | | | | whiteSpace:      [58:32-58:35] {C:0} {A:{}}
| | | | | operatorMath: = [58:36-58:36] {C:0} {A:{}}
| | | | | whiteSpace:   [58:37-58:37] {C:0} {A:{}}
| | | | | number: 339782827 [58:38-58:46] {C:0} {A:{}}
| | | | | whiteSpace:   [58:47-58:47] {C:0} {A:{}}
| | | | | operatorMath: + [58:48-58:48] {C:0} {A:{}}
| | | | | whiteSpace:   [58:49-58:49] {C:0} {A:{}}
| | | | | identifier: l_ind [58:50-58:54] {C:0} {A:{}}
| | | | | newLine: \\\\n [58:55-58:55] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [59:1-59:1] {C:0} {A:{}}
| | | | | statement: let [59:2-59:4] {C:0} {A:{}}
| | | | | whiteSpace:   [59:5-59:5] {C:0} {A:{}}
| | | | | identifier: ma_array [59:6-59:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [59:14-59:14] {C:0} {A:{}}
| | | | | identifier: l_ind [59:15-59:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [59:20-59:20] {C:0} {A:{}}
| | | | | identifier: .f2_smallint [59:21-59:32] {C:0} {A:{}}
| | | | | whiteSpace:     [59:33-59:35] {C:0} {A:{}}
| | | | | operatorMath: = [59:36-59:36] {C:0} {A:{}}
| | | | | whiteSpace:   [59:37-59:37] {C:0} {A:{}}
| | | | | number: 18721 [59:38-59:42] {C:0} {A:{}}
| | | | | whiteSpace:   [59:43-59:43] {C:0} {A:{}}
| | | | | operatorMath: + [59:44-59:44] {C:0} {A:{}}
| | | | | whiteSpace:   [59:45-59:45] {C:0} {A:{}}
| | | | | identifier: l_ind [59:46-59:50] {C:0} {A:{}}
| | | | | newLine: \\\\n [59:51-59:51] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [60:1-60:1] {C:0} {A:{}}
| | | | | statement: let [60:2-60:4] {C:0} {A:{}}
| | | | | whiteSpace:   [60:5-60:5] {C:0} {A:{}}
| | | | | identifier: ma_array [60:6-60:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [60:14-60:14] {C:0} {A:{}}
| | | | | identifier: l_ind [60:15-60:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [60:20-60:20] {C:0} {A:{}}
| | | | | identifier: .f2_decimal [60:21-60:31] {C:0} {A:{}}
| | | | | whiteSpace:      [60:32-60:35] {C:0} {A:{}}
| | | | | operatorMath: = [60:36-60:36] {C:0} {A:{}}
| | | | | whiteSpace:   [60:37-60:37] {C:0} {A:{}}
| | | | | operatorMath: - [60:38-60:38] {C:0} {A:{}}
| | | | | number: 19838849.087712 [60:39-60:53] {C:0} {A:{}}
| | | | | whiteSpace:   [60:54-60:54] {C:0} {A:{}}
| | | | | operatorMath: + [60:55-60:55] {C:0} {A:{}}
| | | | | whiteSpace:   [60:56-60:56] {C:0} {A:{}}
| | | | | identifier: l_ind [60:57-60:61] {C:0} {A:{}}
| | | | | newLine: \\\\n [60:62-60:62] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [61:1-61:1] {C:0} {A:{}}
| | | | | statement: let [61:2-61:4] {C:0} {A:{}}
| | | | | whiteSpace:   [61:5-61:5] {C:0} {A:{}}
| | | | | identifier: ma_array [61:6-61:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [61:14-61:14] {C:0} {A:{}}
| | | | | identifier: l_ind [61:15-61:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [61:20-61:20] {C:0} {A:{}}
| | | | | identifier: .f2_decimal0 [61:21-61:32] {C:0} {A:{}}
| | | | | whiteSpace:     [61:33-61:35] {C:0} {A:{}}
| | | | | operatorMath: = [61:36-61:36] {C:0} {A:{}}
| | | | | whiteSpace:   [61:37-61:37] {C:0} {A:{}}
| | | | | number: 9389007739 [61:38-61:47] {C:0} {A:{}}
| | | | | whiteSpace:   [61:48-61:48] {C:0} {A:{}}
| | | | | operatorMath: + [61:49-61:49] {C:0} {A:{}}
| | | | | whiteSpace:   [61:50-61:50] {C:0} {A:{}}
| | | | | identifier: l_ind [61:51-61:55] {C:0} {A:{}}
| | | | | newLine: \\\\n [61:56-61:56] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [62:1-62:1] {C:0} {A:{}}
| | | | | statement: let [62:2-62:4] {C:0} {A:{}}
| | | | | whiteSpace:   [62:5-62:5] {C:0} {A:{}}
| | | | | identifier: ma_array [62:6-62:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [62:14-62:14] {C:0} {A:{}}
| | | | | identifier: l_ind [62:15-62:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [62:20-62:20] {C:0} {A:{}}
| | | | | identifier: .f2_char [62:21-62:28] {C:0} {A:{}}
| | | | | whiteSpace:         [62:29-62:35] {C:0} {A:{}}
| | | | | operatorMath: = [62:36-62:36] {C:0} {A:{}}
| | | | | whiteSpace:   [62:37-62:37] {C:0} {A:{}}
| | | | | string: \\"texto\\" [62:38-62:44] {C:0} {A:{}}
| | | | | operator: || [62:45-62:46] {C:0} {A:{}}
| | | | | identifier: l_ind [62:47-62:51] {C:0} {A:{}}
| | | | | newLine: \\\\n [62:52-62:52] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [63:1-63:1] {C:0} {A:{}}
| | | | | statement: let [63:2-63:4] {C:0} {A:{}}
| | | | | whiteSpace:   [63:5-63:5] {C:0} {A:{}}
| | | | | identifier: ma_array [63:6-63:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [63:14-63:14] {C:0} {A:{}}
| | | | | identifier: l_ind [63:15-63:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [63:20-63:20] {C:0} {A:{}}
| | | | | identifier: .f2_varchar [63:21-63:31] {C:0} {A:{}}
| | | | | whiteSpace:      [63:32-63:35] {C:0} {A:{}}
| | | | | operatorMath: = [63:36-63:36] {C:0} {A:{}}
| | | | | whiteSpace:   [63:37-63:37] {C:0} {A:{}}
| | | | | string: \\"textovarchar   \\" [63:38-63:54] {C:0} {A:{}}
| | | | | operator: || [63:55-63:56] {C:0} {A:{}}
| | | | | identifier: l_ind [63:57-63:61] {C:0} {A:{}}
| | | | | newLine: \\\\n [63:62-63:62] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [64:1-64:1] {C:0} {A:{}}
| | | | | statement: let [64:2-64:4] {C:0} {A:{}}
| | | | | whiteSpace:   [64:5-64:5] {C:0} {A:{}}
| | | | | identifier: ma_array [64:6-64:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [64:14-64:14] {C:0} {A:{}}
| | | | | identifier: l_ind [64:15-64:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [64:20-64:20] {C:0} {A:{}}
| | | | | identifier: .f2_date [64:21-64:28] {C:0} {A:{}}
| | | | | whiteSpace:         [64:29-64:35] {C:0} {A:{}}
| | | | | operatorMath: = [64:36-64:36] {C:0} {A:{}}
| | | | | whiteSpace:   [64:37-64:37] {C:0} {A:{}}
| | | | | keyword: today [64:38-64:42] {C:0} {A:{}}
| | | | | whiteSpace:   [64:43-64:43] {C:0} {A:{}}
| | | | | operatorMath: + [64:44-64:44] {C:0} {A:{}}
| | | | | whiteSpace:   [64:45-64:45] {C:0} {A:{}}
| | | | | number: 3 [64:46-64:46] {C:0} {A:{}}
| | | | | whiteSpace:   [64:47-64:47] {C:0} {A:{}}
| | | | | keyword: units [64:48-64:52] {C:0} {A:{}}
| | | | | whiteSpace:   [64:53-64:53] {C:0} {A:{}}
| | | | | keyword: day [64:54-64:56] {C:0} {A:{}}
| | | | | newLine: \\\\n [64:57-64:57] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [65:1-65:1] {C:0} {A:{}}
| | | | | statement: let [65:2-65:4] {C:0} {A:{}}
| | | | | whiteSpace:   [65:5-65:5] {C:0} {A:{}}
| | | | | identifier: ma_array [65:6-65:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [65:14-65:14] {C:0} {A:{}}
| | | | | identifier: l_ind [65:15-65:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [65:20-65:20] {C:0} {A:{}}
| | | | | identifier: .f2_dttime_y2s [65:21-65:34] {C:0} {A:{}}
| | | | | whiteSpace:   [65:35-65:35] {C:0} {A:{}}
| | | | | operatorMath: = [65:36-65:36] {C:0} {A:{}}
| | | | | whiteSpace:   [65:37-65:37] {C:0} {A:{}}
| | | | | keyword: current [65:38-65:44] {C:0} {A:{}}
| | | | | whiteSpace:   [65:45-65:45] {C:0} {A:{}}
| | | | | operatorMath: + [65:46-65:46] {C:0} {A:{}}
| | | | | whiteSpace:   [65:47-65:47] {C:0} {A:{}}
| | | | | identifier: l_ind [65:48-65:52] {C:0} {A:{}}
| | | | | whiteSpace:   [65:53-65:53] {C:0} {A:{}}
| | | | | keyword: units [65:54-65:58] {C:0} {A:{}}
| | | | | whiteSpace:   [65:59-65:59] {C:0} {A:{}}
| | | | | keyword: day [65:60-65:62] {C:0} {A:{}}
| | | | | newLine: \\\\n [65:63-65:63] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [66:1-66:1] {C:0} {A:{}}
| | | | | statement: let [66:2-66:4] {C:0} {A:{}}
| | | | | whiteSpace:   [66:5-66:5] {C:0} {A:{}}
| | | | | identifier: ma_array [66:6-66:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [66:14-66:14] {C:0} {A:{}}
| | | | | identifier: l_ind [66:15-66:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [66:20-66:20] {C:0} {A:{}}
| | | | | identifier: .f2_dttime_y2m [66:21-66:34] {C:0} {A:{}}
| | | | | whiteSpace:   [66:35-66:35] {C:0} {A:{}}
| | | | | operatorMath: = [66:36-66:36] {C:0} {A:{}}
| | | | | whiteSpace:   [66:37-66:37] {C:0} {A:{}}
| | | | | keyword: current [66:38-66:44] {C:0} {A:{}}
| | | | | whiteSpace:   [66:45-66:45] {C:0} {A:{}}
| | | | | operatorMath: + [66:46-66:46] {C:0} {A:{}}
| | | | | whiteSpace:   [66:47-66:47] {C:0} {A:{}}
| | | | | identifier: l_ind [66:48-66:52] {C:0} {A:{}}
| | | | | whiteSpace:   [66:53-66:53] {C:0} {A:{}}
| | | | | operatorMath: + [66:54-66:54] {C:0} {A:{}}
| | | | | whiteSpace:   [66:55-66:55] {C:0} {A:{}}
| | | | | number: 1 [66:56-66:56] {C:0} {A:{}}
| | | | | whiteSpace:   [66:57-66:57] {C:0} {A:{}}
| | | | | keyword: units [66:58-66:62] {C:0} {A:{}}
| | | | | whiteSpace:   [66:63-66:63] {C:0} {A:{}}
| | | | | keyword: day [66:64-66:66] {C:0} {A:{}}
| | | | | newLine: \\\\n [66:67-66:67] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [67:1-67:1] {C:0} {A:{}}
| | | | | statement: let [67:2-67:4] {C:0} {A:{}}
| | | | | whiteSpace:   [67:5-67:5] {C:0} {A:{}}
| | | | | identifier: ma_array [67:6-67:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [67:14-67:14] {C:0} {A:{}}
| | | | | identifier: l_ind [67:15-67:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [67:20-67:20] {C:0} {A:{}}
| | | | | identifier: .f2_dttime_y2f [67:21-67:34] {C:0} {A:{}}
| | | | | whiteSpace:   [67:35-67:35] {C:0} {A:{}}
| | | | | operatorMath: = [67:36-67:36] {C:0} {A:{}}
| | | | | whiteSpace:   [67:37-67:37] {C:0} {A:{}}
| | | | | keyword: current [67:38-67:44] {C:0} {A:{}}
| | | | | whiteSpace:   [67:45-67:45] {C:0} {A:{}}
| | | | | operatorMath: + [67:46-67:46] {C:0} {A:{}}
| | | | | whiteSpace:   [67:47-67:47] {C:0} {A:{}}
| | | | | identifier: l_ind [67:48-67:52] {C:0} {A:{}}
| | | | | whiteSpace:   [67:53-67:53] {C:0} {A:{}}
| | | | | operatorMath: + [67:54-67:54] {C:0} {A:{}}
| | | | | whiteSpace:   [67:55-67:55] {C:0} {A:{}}
| | | | | number: 2 [67:56-67:56] {C:0} {A:{}}
| | | | | whiteSpace:   [67:57-67:57] {C:0} {A:{}}
| | | | | keyword: units [67:58-67:62] {C:0} {A:{}}
| | | | | whiteSpace:   [67:63-67:63] {C:0} {A:{}}
| | | | | keyword: day [67:64-67:66] {C:0} {A:{}}
| | | | | newLine: \\\\n [67:67-67:67] {C:0} {A:{}}
| | | | | whiteSpace: \\\\t [68:1-68:1] {C:0} {A:{}}
| | | | | statement: let [68:2-68:4] {C:0} {A:{}}
| | | | | whiteSpace:   [68:5-68:5] {C:0} {A:{}}
| | | | | identifier: ma_array [68:6-68:13] {C:0} {A:{}}
| | | | | operatorBracket: [ [68:14-68:14] {C:0} {A:{}}
| | | | | identifier: l_ind [68:15-68:19] {C:0} {A:{}}
| | | | | operatorBracket: ] [68:20-68:20] {C:0} {A:{}}
| | | | | identifier: .f2_scroll [68:21-68:30] {C:0} {A:{}}
| | | | | whiteSpace:       [68:31-68:35] {C:0} {A:{}}
| | | | | operatorMath: = [68:36-68:36] {C:0} {A:{}}
| | | | | whiteSpace:   [68:37-68:37] {C:0} {A:{}}
| | | | | string: \\"texto scroll texto scroll texto scroll \\" [68:38-68:78] {C:0} {A:{}}
| | | | | newLine: \\\\n [68:79-68:79] {C:0} {A:{}}
| | | | endBlock:  [54:1-69:10] {C:1} {A:{}}
| | | | | statement: end [69:1-69:3] {C:0} {A:{}}
| | | | | whiteSpace:   [69:4-69:4] {C:0} {A:{}}
| | | | | statement: for [69:5-69:7] {C:0} {A:{}}
| | | | | endLine: - [69:8-69:10] {C:0} {A:{}}
| | | | | -newLine: \\\\n\\\\n\\\\n [69:8-69:10] {C:0} {A:{}}
| | endBlock:  [1:1-72:9] {C:1} {A:{}}
| | | statement: end [72:1-72:3] {C:0} {A:{}}
| | | whiteSpace:   [72:4-72:4] {C:0} {A:{}}
| | | statement: main [72:5-72:8] {C:0} {A:{}}
| | | endLine: - [72:9-72:9] {C:0} {A:{}}
| | | -newLine: \\\\n [72:9-72:9] {C:0} {A:{}}

================================================================================",
}
`;

exports[`4gl: hello4.4gl token 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): "

====================================options=====================================
debug: false
filepath: \\"W:\\\\\\\\ws_tds_vscode\\\\\\\\tds-parsers\\\\\\\\tests\\\\\\\\4gl\\\\\\\\hello/hello4.4gl\\"
parserProcess: \\"token\\"
=====================================input======================================
001:main
002:	define l_ind smallint
003:	define ma_char array[5] of char(3)
004:
005:--#	define ma_integer array[3] of integer
006:
007:	define ma_array array [3] of record
008:	f2_check      char(1),
009:	f2_integer    integer,
010:	f2_smallint   smallint,
011:	f2_decimal    decimal(17,6),
012:	f2_decimal0   decimal(10,0),
013:	f2_char       char(10),
014:	f2_date       date,
015:	f2_dttime_y2s datetime year to second,
016:	f2_dttime_y2m datetime year to month,
017:	f2_dttime_y2f datetime year to fraction(3),
018:	f2_scroll     char(100),
019:	f2_varchar    varchar(20)
020:
021:end record
022:
023:
024:initialize ma_array to null
025:initialize ma_integer to null
026:
027:
028:display \\"hello world\\"
029:
030:call _arraydeleteitem(ma_array)
031:call _arrayadditem(ma_array,3)
032:
033:call _arraydeleteitem(ma_integer)
034:call _arrayadditem(ma_integer,3)
035:
036:for l_ind = 1 to 3
037:	let ma_integer[l_ind] = null
038:
039:	let ma_array[l_ind].f2_check      = null
040:	let ma_array[l_ind].f2_integer    = null
041:	let ma_array[l_ind].f2_smallint   = null
042:	let ma_array[l_ind].f2_decimal    = null
043:	let ma_array[l_ind].f2_decimal0   = null
044:	let ma_array[l_ind].f2_char       = \\" \\"
045:	let ma_array[l_ind].f2_varchar    = \\" \\"
046:	let ma_array[l_ind].f2_date       = today + l_ind units day
047:	let ma_array[l_ind].f2_dttime_y2s = null
048:	let ma_array[l_ind].f2_dttime_y2m = null
049:	let ma_array[l_ind].f2_dttime_y2f = null
050:	let ma_array[l_ind].f2_scroll     = null
051:
052:end for
053:
054:for l_ind = 1 to 3
055:	let ma_integer[l_ind] = l_ind
056:
057:	let ma_array[l_ind].f2_check      = \\"s\\"
058:	let ma_array[l_ind].f2_integer    = 339782827 + l_ind
059:	let ma_array[l_ind].f2_smallint   = 18721 + l_ind
060:	let ma_array[l_ind].f2_decimal    = -19838849.087712 + l_ind
061:	let ma_array[l_ind].f2_decimal0   = 9389007739 + l_ind
062:	let ma_array[l_ind].f2_char       = \\"texto\\"||l_ind
063:	let ma_array[l_ind].f2_varchar    = \\"textovarchar   \\"||l_ind
064:	let ma_array[l_ind].f2_date       = today + 3 units day
065:	let ma_array[l_ind].f2_dttime_y2s = current + l_ind units day
066:	let ma_array[l_ind].f2_dttime_y2m = current + l_ind + 1 units day
067:	let ma_array[l_ind].f2_dttime_y2f = current + l_ind + 2 units day
068:	let ma_array[l_ind].f2_scroll     = \\"texto scroll texto scroll texto scroll \\"
069:end for
070:
071:
072:end main
073:
=====================================output=====================================
token:  [1:1-72:9] {C:1} {A:{}}
| statement: main [1:1-1:4] {C:0} {A:{}}
| newLine: \\\\n [1:5-1:5] {C:0} {A:{}}
| whiteSpace: \\\\t [2:1-2:1] {C:0} {A:{}}
| statement: define [2:2-2:7] {C:0} {A:{}}
| whiteSpace:   [2:8-2:8] {C:0} {A:{}}
| identifier: l_ind [2:9-2:13] {C:0} {A:{}}
| whiteSpace:   [2:14-2:14] {C:0} {A:{}}
| keyword: smallint [2:15-2:22] {C:0} {A:{}}
| newLine: \\\\n [2:23-2:23] {C:0} {A:{}}
| whiteSpace: \\\\t [3:1-3:1] {C:0} {A:{}}
| statement: define [3:2-3:7] {C:0} {A:{}}
| whiteSpace:   [3:8-3:8] {C:0} {A:{}}
| identifier: ma_char [3:9-3:15] {C:0} {A:{}}
| whiteSpace:   [3:16-3:16] {C:0} {A:{}}
| keyword: array [3:17-3:21] {C:0} {A:{}}
| operatorBracket: [ [3:22-3:22] {C:0} {A:{}}
| number: 5 [3:23-3:23] {C:0} {A:{}}
| operatorBracket: ] [3:24-3:24] {C:0} {A:{}}
| whiteSpace:   [3:25-3:25] {C:0} {A:{}}
| keyword: of [3:26-3:27] {C:0} {A:{}}
| whiteSpace:   [3:28-3:28] {C:0} {A:{}}
| keyword: char [3:29-3:32] {C:0} {A:{}}
| operatorParenthesis: ( [3:33-3:33] {C:0} {A:{}}
| number: 3 [3:34-3:34] {C:0} {A:{}}
| operatorParenthesis: ) [3:35-3:35] {C:0} {A:{}}
| newLine: \\\\n\\\\n [3:36-3:37] {C:0} {A:{}}
| comment: --#\\\\tdefine ma_integer array[3] of integer\\\\n\\\\n [5:1-5:43] {C:0} {A:{}}
| whiteSpace: \\\\t [7:1-7:1] {C:0} {A:{}}
| statement: define [7:2-7:7] {C:0} {A:{}}
| whiteSpace:   [7:8-7:8] {C:0} {A:{}}
| identifier: ma_array [7:9-7:16] {C:0} {A:{}}
| whiteSpace:   [7:17-7:17] {C:0} {A:{}}
| keyword: array [7:18-7:22] {C:0} {A:{}}
| whiteSpace:   [7:23-7:23] {C:0} {A:{}}
| operatorBracket: [ [7:24-7:24] {C:0} {A:{}}
| number: 3 [7:25-7:25] {C:0} {A:{}}
| operatorBracket: ] [7:26-7:26] {C:0} {A:{}}
| whiteSpace:   [7:27-7:27] {C:0} {A:{}}
| keyword: of [7:28-7:29] {C:0} {A:{}}
| whiteSpace:   [7:30-7:30] {C:0} {A:{}}
| keyword: record [7:31-7:36] {C:0} {A:{}}
| newLine: \\\\n [7:37-7:37] {C:0} {A:{}}
| whiteSpace: \\\\t [8:1-8:1] {C:0} {A:{}}
| identifier: f2_check [8:2-8:9] {C:0} {A:{}}
| whiteSpace:        [8:10-8:15] {C:0} {A:{}}
| keyword: char [8:16-8:19] {C:0} {A:{}}
| operatorParenthesis: ( [8:20-8:20] {C:0} {A:{}}
| number: 1 [8:21-8:21] {C:0} {A:{}}
| operatorParenthesis: ) [8:22-8:22] {C:0} {A:{}}
| operatorSeparator: , [8:23-8:23] {C:0} {A:{}}
| newLine: \\\\n [8:24-8:24] {C:0} {A:{}}
| whiteSpace: \\\\t [9:1-9:1] {C:0} {A:{}}
| identifier: f2_integer [9:2-9:11] {C:0} {A:{}}
| whiteSpace:      [9:12-9:15] {C:0} {A:{}}
| keyword: integer [9:16-9:22] {C:0} {A:{}}
| operatorSeparator: , [9:23-9:23] {C:0} {A:{}}
| newLine: \\\\n [9:24-9:24] {C:0} {A:{}}
| whiteSpace: \\\\t [10:1-10:1] {C:0} {A:{}}
| identifier: f2_smallint [10:2-10:12] {C:0} {A:{}}
| whiteSpace:     [10:13-10:15] {C:0} {A:{}}
| keyword: smallint [10:16-10:23] {C:0} {A:{}}
| operatorSeparator: , [10:24-10:24] {C:0} {A:{}}
| newLine: \\\\n [10:25-10:25] {C:0} {A:{}}
| whiteSpace: \\\\t [11:1-11:1] {C:0} {A:{}}
| identifier: f2_decimal [11:2-11:11] {C:0} {A:{}}
| whiteSpace:      [11:12-11:15] {C:0} {A:{}}
| keyword: decimal [11:16-11:22] {C:0} {A:{}}
| operatorParenthesis: ( [11:23-11:23] {C:0} {A:{}}
| number: 17 [11:24-11:25] {C:0} {A:{}}
| operatorSeparator: , [11:26-11:26] {C:0} {A:{}}
| number: 6 [11:27-11:27] {C:0} {A:{}}
| operatorParenthesis: ) [11:28-11:28] {C:0} {A:{}}
| operatorSeparator: , [11:29-11:29] {C:0} {A:{}}
| newLine: \\\\n [11:30-11:30] {C:0} {A:{}}
| whiteSpace: \\\\t [12:1-12:1] {C:0} {A:{}}
| identifier: f2_decimal0 [12:2-12:12] {C:0} {A:{}}
| whiteSpace:     [12:13-12:15] {C:0} {A:{}}
| keyword: decimal [12:16-12:22] {C:0} {A:{}}
| operatorParenthesis: ( [12:23-12:23] {C:0} {A:{}}
| number: 10 [12:24-12:25] {C:0} {A:{}}
| operatorSeparator: , [12:26-12:26] {C:0} {A:{}}
| number: 0 [12:27-12:27] {C:0} {A:{}}
| operatorParenthesis: ) [12:28-12:28] {C:0} {A:{}}
| operatorSeparator: , [12:29-12:29] {C:0} {A:{}}
| newLine: \\\\n [12:30-12:30] {C:0} {A:{}}
| whiteSpace: \\\\t [13:1-13:1] {C:0} {A:{}}
| identifier: f2_char [13:2-13:8] {C:0} {A:{}}
| whiteSpace:         [13:9-13:15] {C:0} {A:{}}
| keyword: char [13:16-13:19] {C:0} {A:{}}
| operatorParenthesis: ( [13:20-13:20] {C:0} {A:{}}
| number: 10 [13:21-13:22] {C:0} {A:{}}
| operatorParenthesis: ) [13:23-13:23] {C:0} {A:{}}
| operatorSeparator: , [13:24-13:24] {C:0} {A:{}}
| newLine: \\\\n [13:25-13:25] {C:0} {A:{}}
| whiteSpace: \\\\t [14:1-14:1] {C:0} {A:{}}
| identifier: f2_date [14:2-14:8] {C:0} {A:{}}
| whiteSpace:         [14:9-14:15] {C:0} {A:{}}
| keyword: date [14:16-14:19] {C:0} {A:{}}
| operatorSeparator: , [14:20-14:20] {C:0} {A:{}}
| newLine: \\\\n [14:21-14:21] {C:0} {A:{}}
| whiteSpace: \\\\t [15:1-15:1] {C:0} {A:{}}
| identifier: f2_dttime_y2s [15:2-15:14] {C:0} {A:{}}
| whiteSpace:   [15:15-15:15] {C:0} {A:{}}
| keyword: datetime [15:16-15:23] {C:0} {A:{}}
| whiteSpace:   [15:24-15:24] {C:0} {A:{}}
| keyword: year [15:25-15:28] {C:0} {A:{}}
| whiteSpace:   [15:29-15:29] {C:0} {A:{}}
| keyword: to [15:30-15:31] {C:0} {A:{}}
| whiteSpace:   [15:32-15:32] {C:0} {A:{}}
| keyword: second [15:33-15:38] {C:0} {A:{}}
| operatorSeparator: , [15:39-15:39] {C:0} {A:{}}
| newLine: \\\\n [15:40-15:40] {C:0} {A:{}}
| whiteSpace: \\\\t [16:1-16:1] {C:0} {A:{}}
| identifier: f2_dttime_y2m [16:2-16:14] {C:0} {A:{}}
| whiteSpace:   [16:15-16:15] {C:0} {A:{}}
| keyword: datetime [16:16-16:23] {C:0} {A:{}}
| whiteSpace:   [16:24-16:24] {C:0} {A:{}}
| keyword: year [16:25-16:28] {C:0} {A:{}}
| whiteSpace:   [16:29-16:29] {C:0} {A:{}}
| keyword: to [16:30-16:31] {C:0} {A:{}}
| whiteSpace:   [16:32-16:32] {C:0} {A:{}}
| keyword: month [16:33-16:37] {C:0} {A:{}}
| operatorSeparator: , [16:38-16:38] {C:0} {A:{}}
| newLine: \\\\n [16:39-16:39] {C:0} {A:{}}
| whiteSpace: \\\\t [17:1-17:1] {C:0} {A:{}}
| identifier: f2_dttime_y2f [17:2-17:14] {C:0} {A:{}}
| whiteSpace:   [17:15-17:15] {C:0} {A:{}}
| keyword: datetime [17:16-17:23] {C:0} {A:{}}
| whiteSpace:   [17:24-17:24] {C:0} {A:{}}
| keyword: year [17:25-17:28] {C:0} {A:{}}
| whiteSpace:   [17:29-17:29] {C:0} {A:{}}
| keyword: to [17:30-17:31] {C:0} {A:{}}
| whiteSpace:   [17:32-17:32] {C:0} {A:{}}
| keyword: fraction [17:33-17:40] {C:0} {A:{}}
| operatorParenthesis: ( [17:41-17:41] {C:0} {A:{}}
| number: 3 [17:42-17:42] {C:0} {A:{}}
| operatorParenthesis: ) [17:43-17:43] {C:0} {A:{}}
| operatorSeparator: , [17:44-17:44] {C:0} {A:{}}
| newLine: \\\\n [17:45-17:45] {C:0} {A:{}}
| whiteSpace: \\\\t [18:1-18:1] {C:0} {A:{}}
| identifier: f2_scroll [18:2-18:10] {C:0} {A:{}}
| whiteSpace:       [18:11-18:15] {C:0} {A:{}}
| keyword: char [18:16-18:19] {C:0} {A:{}}
| operatorParenthesis: ( [18:20-18:20] {C:0} {A:{}}
| number: 100 [18:21-18:23] {C:0} {A:{}}
| operatorParenthesis: ) [18:24-18:24] {C:0} {A:{}}
| operatorSeparator: , [18:25-18:25] {C:0} {A:{}}
| newLine: \\\\n [18:26-18:26] {C:0} {A:{}}
| whiteSpace: \\\\t [19:1-19:1] {C:0} {A:{}}
| identifier: f2_varchar [19:2-19:11] {C:0} {A:{}}
| whiteSpace:      [19:12-19:15] {C:0} {A:{}}
| keyword: varchar [19:16-19:22] {C:0} {A:{}}
| operatorParenthesis: ( [19:23-19:23] {C:0} {A:{}}
| number: 20 [19:24-19:25] {C:0} {A:{}}
| operatorParenthesis: ) [19:26-19:26] {C:0} {A:{}}
| newLine: \\\\n\\\\n [19:27-19:28] {C:0} {A:{}}
| statement: end [21:1-21:3] {C:0} {A:{}}
| whiteSpace:   [21:4-21:4] {C:0} {A:{}}
| keyword: record [21:5-21:10] {C:0} {A:{}}
| newLine: \\\\n\\\\n\\\\n [21:11-21:13] {C:0} {A:{}}
| statement: initialize [24:1-24:10] {C:0} {A:{}}
| whiteSpace:   [24:11-24:11] {C:0} {A:{}}
| identifier: ma_array [24:12-24:19] {C:0} {A:{}}
| whiteSpace:   [24:20-24:20] {C:0} {A:{}}
| keyword: to [24:21-24:22] {C:0} {A:{}}
| whiteSpace:   [24:23-24:23] {C:0} {A:{}}
| keyword: null [24:24-24:27] {C:0} {A:{}}
| newLine: \\\\n [24:28-24:28] {C:0} {A:{}}
| statement: initialize [25:1-25:10] {C:0} {A:{}}
| whiteSpace:   [25:11-25:11] {C:0} {A:{}}
| identifier: ma_integer [25:12-25:21] {C:0} {A:{}}
| whiteSpace:   [25:22-25:22] {C:0} {A:{}}
| keyword: to [25:23-25:24] {C:0} {A:{}}
| whiteSpace:   [25:25-25:25] {C:0} {A:{}}
| keyword: null [25:26-25:29] {C:0} {A:{}}
| newLine: \\\\n\\\\n\\\\n [25:30-25:32] {C:0} {A:{}}
| statement: display [28:1-28:7] {C:0} {A:{}}
| whiteSpace:   [28:8-28:8] {C:0} {A:{}}
| string: \\"hello world\\" [28:9-28:21] {C:0} {A:{}}
| newLine: \\\\n\\\\n [28:22-28:23] {C:0} {A:{}}
| statement: call [30:1-30:4] {C:0} {A:{}}
| whiteSpace:   [30:5-30:5] {C:0} {A:{}}
| identifier: _arraydeleteitem [30:6-30:21] {C:0} {A:{}}
| operatorParenthesis: ( [30:22-30:22] {C:0} {A:{}}
| identifier: ma_array [30:23-30:30] {C:0} {A:{}}
| operatorParenthesis: ) [30:31-30:31] {C:0} {A:{}}
| newLine: \\\\n [30:32-30:32] {C:0} {A:{}}
| statement: call [31:1-31:4] {C:0} {A:{}}
| whiteSpace:   [31:5-31:5] {C:0} {A:{}}
| identifier: _arrayadditem [31:6-31:18] {C:0} {A:{}}
| operatorParenthesis: ( [31:19-31:19] {C:0} {A:{}}
| identifier: ma_array [31:20-31:27] {C:0} {A:{}}
| operatorSeparator: , [31:28-31:28] {C:0} {A:{}}
| number: 3 [31:29-31:29] {C:0} {A:{}}
| operatorParenthesis: ) [31:30-31:30] {C:0} {A:{}}
| newLine: \\\\n\\\\n [31:31-31:32] {C:0} {A:{}}
| statement: call [33:1-33:4] {C:0} {A:{}}
| whiteSpace:   [33:5-33:5] {C:0} {A:{}}
| identifier: _arraydeleteitem [33:6-33:21] {C:0} {A:{}}
| operatorParenthesis: ( [33:22-33:22] {C:0} {A:{}}
| identifier: ma_integer [33:23-33:32] {C:0} {A:{}}
| operatorParenthesis: ) [33:33-33:33] {C:0} {A:{}}
| newLine: \\\\n [33:34-33:34] {C:0} {A:{}}
| statement: call [34:1-34:4] {C:0} {A:{}}
| whiteSpace:   [34:5-34:5] {C:0} {A:{}}
| identifier: _arrayadditem [34:6-34:18] {C:0} {A:{}}
| operatorParenthesis: ( [34:19-34:19] {C:0} {A:{}}
| identifier: ma_integer [34:20-34:29] {C:0} {A:{}}
| operatorSeparator: , [34:30-34:30] {C:0} {A:{}}
| number: 3 [34:31-34:31] {C:0} {A:{}}
| operatorParenthesis: ) [34:32-34:32] {C:0} {A:{}}
| newLine: \\\\n\\\\n [34:33-34:34] {C:0} {A:{}}
| statement: for [36:1-36:3] {C:0} {A:{}}
| whiteSpace:   [36:4-36:4] {C:0} {A:{}}
| identifier: l_ind [36:5-36:9] {C:0} {A:{}}
| whiteSpace:   [36:10-36:10] {C:0} {A:{}}
| operatorMath: = [36:11-36:11] {C:0} {A:{}}
| whiteSpace:   [36:12-36:12] {C:0} {A:{}}
| number: 1 [36:13-36:13] {C:0} {A:{}}
| whiteSpace:   [36:14-36:14] {C:0} {A:{}}
| keyword: to [36:15-36:16] {C:0} {A:{}}
| whiteSpace:   [36:17-36:17] {C:0} {A:{}}
| number: 3 [36:18-36:18] {C:0} {A:{}}
| newLine: \\\\n [36:19-36:19] {C:0} {A:{}}
| whiteSpace: \\\\t [37:1-37:1] {C:0} {A:{}}
| statement: let [37:2-37:4] {C:0} {A:{}}
| whiteSpace:   [37:5-37:5] {C:0} {A:{}}
| identifier: ma_integer [37:6-37:15] {C:0} {A:{}}
| operatorBracket: [ [37:16-37:16] {C:0} {A:{}}
| identifier: l_ind [37:17-37:21] {C:0} {A:{}}
| operatorBracket: ] [37:22-37:22] {C:0} {A:{}}
| whiteSpace:   [37:23-37:23] {C:0} {A:{}}
| operatorMath: = [37:24-37:24] {C:0} {A:{}}
| whiteSpace:   [37:25-37:25] {C:0} {A:{}}
| keyword: null [37:26-37:29] {C:0} {A:{}}
| newLine: \\\\n\\\\n [37:30-37:31] {C:0} {A:{}}
| whiteSpace: \\\\t [39:1-39:1] {C:0} {A:{}}
| statement: let [39:2-39:4] {C:0} {A:{}}
| whiteSpace:   [39:5-39:5] {C:0} {A:{}}
| identifier: ma_array [39:6-39:13] {C:0} {A:{}}
| operatorBracket: [ [39:14-39:14] {C:0} {A:{}}
| identifier: l_ind [39:15-39:19] {C:0} {A:{}}
| operatorBracket: ] [39:20-39:20] {C:0} {A:{}}
| identifier: .f2_check [39:21-39:29] {C:0} {A:{}}
| whiteSpace:        [39:30-39:35] {C:0} {A:{}}
| operatorMath: = [39:36-39:36] {C:0} {A:{}}
| whiteSpace:   [39:37-39:37] {C:0} {A:{}}
| keyword: null [39:38-39:41] {C:0} {A:{}}
| newLine: \\\\n [39:42-39:42] {C:0} {A:{}}
| whiteSpace: \\\\t [40:1-40:1] {C:0} {A:{}}
| statement: let [40:2-40:4] {C:0} {A:{}}
| whiteSpace:   [40:5-40:5] {C:0} {A:{}}
| identifier: ma_array [40:6-40:13] {C:0} {A:{}}
| operatorBracket: [ [40:14-40:14] {C:0} {A:{}}
| identifier: l_ind [40:15-40:19] {C:0} {A:{}}
| operatorBracket: ] [40:20-40:20] {C:0} {A:{}}
| identifier: .f2_integer [40:21-40:31] {C:0} {A:{}}
| whiteSpace:      [40:32-40:35] {C:0} {A:{}}
| operatorMath: = [40:36-40:36] {C:0} {A:{}}
| whiteSpace:   [40:37-40:37] {C:0} {A:{}}
| keyword: null [40:38-40:41] {C:0} {A:{}}
| newLine: \\\\n [40:42-40:42] {C:0} {A:{}}
| whiteSpace: \\\\t [41:1-41:1] {C:0} {A:{}}
| statement: let [41:2-41:4] {C:0} {A:{}}
| whiteSpace:   [41:5-41:5] {C:0} {A:{}}
| identifier: ma_array [41:6-41:13] {C:0} {A:{}}
| operatorBracket: [ [41:14-41:14] {C:0} {A:{}}
| identifier: l_ind [41:15-41:19] {C:0} {A:{}}
| operatorBracket: ] [41:20-41:20] {C:0} {A:{}}
| identifier: .f2_smallint [41:21-41:32] {C:0} {A:{}}
| whiteSpace:     [41:33-41:35] {C:0} {A:{}}
| operatorMath: = [41:36-41:36] {C:0} {A:{}}
| whiteSpace:   [41:37-41:37] {C:0} {A:{}}
| keyword: null [41:38-41:41] {C:0} {A:{}}
| newLine: \\\\n [41:42-41:42] {C:0} {A:{}}
| whiteSpace: \\\\t [42:1-42:1] {C:0} {A:{}}
| statement: let [42:2-42:4] {C:0} {A:{}}
| whiteSpace:   [42:5-42:5] {C:0} {A:{}}
| identifier: ma_array [42:6-42:13] {C:0} {A:{}}
| operatorBracket: [ [42:14-42:14] {C:0} {A:{}}
| identifier: l_ind [42:15-42:19] {C:0} {A:{}}
| operatorBracket: ] [42:20-42:20] {C:0} {A:{}}
| identifier: .f2_decimal [42:21-42:31] {C:0} {A:{}}
| whiteSpace:      [42:32-42:35] {C:0} {A:{}}
| operatorMath: = [42:36-42:36] {C:0} {A:{}}
| whiteSpace:   [42:37-42:37] {C:0} {A:{}}
| keyword: null [42:38-42:41] {C:0} {A:{}}
| newLine: \\\\n [42:42-42:42] {C:0} {A:{}}
| whiteSpace: \\\\t [43:1-43:1] {C:0} {A:{}}
| statement: let [43:2-43:4] {C:0} {A:{}}
| whiteSpace:   [43:5-43:5] {C:0} {A:{}}
| identifier: ma_array [43:6-43:13] {C:0} {A:{}}
| operatorBracket: [ [43:14-43:14] {C:0} {A:{}}
| identifier: l_ind [43:15-43:19] {C:0} {A:{}}
| operatorBracket: ] [43:20-43:20] {C:0} {A:{}}
| identifier: .f2_decimal0 [43:21-43:32] {C:0} {A:{}}
| whiteSpace:     [43:33-43:35] {C:0} {A:{}}
| operatorMath: = [43:36-43:36] {C:0} {A:{}}
| whiteSpace:   [43:37-43:37] {C:0} {A:{}}
| keyword: null [43:38-43:41] {C:0} {A:{}}
| newLine: \\\\n [43:42-43:42] {C:0} {A:{}}
| whiteSpace: \\\\t [44:1-44:1] {C:0} {A:{}}
| statement: let [44:2-44:4] {C:0} {A:{}}
| whiteSpace:   [44:5-44:5] {C:0} {A:{}}
| identifier: ma_array [44:6-44:13] {C:0} {A:{}}
| operatorBracket: [ [44:14-44:14] {C:0} {A:{}}
| identifier: l_ind [44:15-44:19] {C:0} {A:{}}
| operatorBracket: ] [44:20-44:20] {C:0} {A:{}}
| identifier: .f2_char [44:21-44:28] {C:0} {A:{}}
| whiteSpace:         [44:29-44:35] {C:0} {A:{}}
| operatorMath: = [44:36-44:36] {C:0} {A:{}}
| whiteSpace:   [44:37-44:37] {C:0} {A:{}}
| string: \\" \\" [44:38-44:40] {C:0} {A:{}}
| newLine: \\\\n [44:41-44:41] {C:0} {A:{}}
| whiteSpace: \\\\t [45:1-45:1] {C:0} {A:{}}
| statement: let [45:2-45:4] {C:0} {A:{}}
| whiteSpace:   [45:5-45:5] {C:0} {A:{}}
| identifier: ma_array [45:6-45:13] {C:0} {A:{}}
| operatorBracket: [ [45:14-45:14] {C:0} {A:{}}
| identifier: l_ind [45:15-45:19] {C:0} {A:{}}
| operatorBracket: ] [45:20-45:20] {C:0} {A:{}}
| identifier: .f2_varchar [45:21-45:31] {C:0} {A:{}}
| whiteSpace:      [45:32-45:35] {C:0} {A:{}}
| operatorMath: = [45:36-45:36] {C:0} {A:{}}
| whiteSpace:   [45:37-45:37] {C:0} {A:{}}
| string: \\" \\" [45:38-45:40] {C:0} {A:{}}
| newLine: \\\\n [45:41-45:41] {C:0} {A:{}}
| whiteSpace: \\\\t [46:1-46:1] {C:0} {A:{}}
| statement: let [46:2-46:4] {C:0} {A:{}}
| whiteSpace:   [46:5-46:5] {C:0} {A:{}}
| identifier: ma_array [46:6-46:13] {C:0} {A:{}}
| operatorBracket: [ [46:14-46:14] {C:0} {A:{}}
| identifier: l_ind [46:15-46:19] {C:0} {A:{}}
| operatorBracket: ] [46:20-46:20] {C:0} {A:{}}
| identifier: .f2_date [46:21-46:28] {C:0} {A:{}}
| whiteSpace:         [46:29-46:35] {C:0} {A:{}}
| operatorMath: = [46:36-46:36] {C:0} {A:{}}
| whiteSpace:   [46:37-46:37] {C:0} {A:{}}
| keyword: today [46:38-46:42] {C:0} {A:{}}
| whiteSpace:   [46:43-46:43] {C:0} {A:{}}
| operatorMath: + [46:44-46:44] {C:0} {A:{}}
| whiteSpace:   [46:45-46:45] {C:0} {A:{}}
| identifier: l_ind [46:46-46:50] {C:0} {A:{}}
| whiteSpace:   [46:51-46:51] {C:0} {A:{}}
| keyword: units [46:52-46:56] {C:0} {A:{}}
| whiteSpace:   [46:57-46:57] {C:0} {A:{}}
| keyword: day [46:58-46:60] {C:0} {A:{}}
| newLine: \\\\n [46:61-46:61] {C:0} {A:{}}
| whiteSpace: \\\\t [47:1-47:1] {C:0} {A:{}}
| statement: let [47:2-47:4] {C:0} {A:{}}
| whiteSpace:   [47:5-47:5] {C:0} {A:{}}
| identifier: ma_array [47:6-47:13] {C:0} {A:{}}
| operatorBracket: [ [47:14-47:14] {C:0} {A:{}}
| identifier: l_ind [47:15-47:19] {C:0} {A:{}}
| operatorBracket: ] [47:20-47:20] {C:0} {A:{}}
| identifier: .f2_dttime_y2s [47:21-47:34] {C:0} {A:{}}
| whiteSpace:   [47:35-47:35] {C:0} {A:{}}
| operatorMath: = [47:36-47:36] {C:0} {A:{}}
| whiteSpace:   [47:37-47:37] {C:0} {A:{}}
| keyword: null [47:38-47:41] {C:0} {A:{}}
| newLine: \\\\n [47:42-47:42] {C:0} {A:{}}
| whiteSpace: \\\\t [48:1-48:1] {C:0} {A:{}}
| statement: let [48:2-48:4] {C:0} {A:{}}
| whiteSpace:   [48:5-48:5] {C:0} {A:{}}
| identifier: ma_array [48:6-48:13] {C:0} {A:{}}
| operatorBracket: [ [48:14-48:14] {C:0} {A:{}}
| identifier: l_ind [48:15-48:19] {C:0} {A:{}}
| operatorBracket: ] [48:20-48:20] {C:0} {A:{}}
| identifier: .f2_dttime_y2m [48:21-48:34] {C:0} {A:{}}
| whiteSpace:   [48:35-48:35] {C:0} {A:{}}
| operatorMath: = [48:36-48:36] {C:0} {A:{}}
| whiteSpace:   [48:37-48:37] {C:0} {A:{}}
| keyword: null [48:38-48:41] {C:0} {A:{}}
| newLine: \\\\n [48:42-48:42] {C:0} {A:{}}
| whiteSpace: \\\\t [49:1-49:1] {C:0} {A:{}}
| statement: let [49:2-49:4] {C:0} {A:{}}
| whiteSpace:   [49:5-49:5] {C:0} {A:{}}
| identifier: ma_array [49:6-49:13] {C:0} {A:{}}
| operatorBracket: [ [49:14-49:14] {C:0} {A:{}}
| identifier: l_ind [49:15-49:19] {C:0} {A:{}}
| operatorBracket: ] [49:20-49:20] {C:0} {A:{}}
| identifier: .f2_dttime_y2f [49:21-49:34] {C:0} {A:{}}
| whiteSpace:   [49:35-49:35] {C:0} {A:{}}
| operatorMath: = [49:36-49:36] {C:0} {A:{}}
| whiteSpace:   [49:37-49:37] {C:0} {A:{}}
| keyword: null [49:38-49:41] {C:0} {A:{}}
| newLine: \\\\n [49:42-49:42] {C:0} {A:{}}
| whiteSpace: \\\\t [50:1-50:1] {C:0} {A:{}}
| statement: let [50:2-50:4] {C:0} {A:{}}
| whiteSpace:   [50:5-50:5] {C:0} {A:{}}
| identifier: ma_array [50:6-50:13] {C:0} {A:{}}
| operatorBracket: [ [50:14-50:14] {C:0} {A:{}}
| identifier: l_ind [50:15-50:19] {C:0} {A:{}}
| operatorBracket: ] [50:20-50:20] {C:0} {A:{}}
| identifier: .f2_scroll [50:21-50:30] {C:0} {A:{}}
| whiteSpace:       [50:31-50:35] {C:0} {A:{}}
| operatorMath: = [50:36-50:36] {C:0} {A:{}}
| whiteSpace:   [50:37-50:37] {C:0} {A:{}}
| keyword: null [50:38-50:41] {C:0} {A:{}}
| newLine: \\\\n\\\\n [50:42-50:43] {C:0} {A:{}}
| statement: end [52:1-52:3] {C:0} {A:{}}
| whiteSpace:   [52:4-52:4] {C:0} {A:{}}
| statement: for [52:5-52:7] {C:0} {A:{}}
| newLine: \\\\n\\\\n [52:8-52:9] {C:0} {A:{}}
| statement: for [54:1-54:3] {C:0} {A:{}}
| whiteSpace:   [54:4-54:4] {C:0} {A:{}}
| identifier: l_ind [54:5-54:9] {C:0} {A:{}}
| whiteSpace:   [54:10-54:10] {C:0} {A:{}}
| operatorMath: = [54:11-54:11] {C:0} {A:{}}
| whiteSpace:   [54:12-54:12] {C:0} {A:{}}
| number: 1 [54:13-54:13] {C:0} {A:{}}
| whiteSpace:   [54:14-54:14] {C:0} {A:{}}
| keyword: to [54:15-54:16] {C:0} {A:{}}
| whiteSpace:   [54:17-54:17] {C:0} {A:{}}
| number: 3 [54:18-54:18] {C:0} {A:{}}
| newLine: \\\\n [54:19-54:19] {C:0} {A:{}}
| whiteSpace: \\\\t [55:1-55:1] {C:0} {A:{}}
| statement: let [55:2-55:4] {C:0} {A:{}}
| whiteSpace:   [55:5-55:5] {C:0} {A:{}}
| identifier: ma_integer [55:6-55:15] {C:0} {A:{}}
| operatorBracket: [ [55:16-55:16] {C:0} {A:{}}
| identifier: l_ind [55:17-55:21] {C:0} {A:{}}
| operatorBracket: ] [55:22-55:22] {C:0} {A:{}}
| whiteSpace:   [55:23-55:23] {C:0} {A:{}}
| operatorMath: = [55:24-55:24] {C:0} {A:{}}
| whiteSpace:   [55:25-55:25] {C:0} {A:{}}
| identifier: l_ind [55:26-55:30] {C:0} {A:{}}
| newLine: \\\\n\\\\n [55:31-55:32] {C:0} {A:{}}
| whiteSpace: \\\\t [57:1-57:1] {C:0} {A:{}}
| statement: let [57:2-57:4] {C:0} {A:{}}
| whiteSpace:   [57:5-57:5] {C:0} {A:{}}
| identifier: ma_array [57:6-57:13] {C:0} {A:{}}
| operatorBracket: [ [57:14-57:14] {C:0} {A:{}}
| identifier: l_ind [57:15-57:19] {C:0} {A:{}}
| operatorBracket: ] [57:20-57:20] {C:0} {A:{}}
| identifier: .f2_check [57:21-57:29] {C:0} {A:{}}
| whiteSpace:        [57:30-57:35] {C:0} {A:{}}
| operatorMath: = [57:36-57:36] {C:0} {A:{}}
| whiteSpace:   [57:37-57:37] {C:0} {A:{}}
| string: \\"s\\" [57:38-57:40] {C:0} {A:{}}
| newLine: \\\\n [57:41-57:41] {C:0} {A:{}}
| whiteSpace: \\\\t [58:1-58:1] {C:0} {A:{}}
| statement: let [58:2-58:4] {C:0} {A:{}}
| whiteSpace:   [58:5-58:5] {C:0} {A:{}}
| identifier: ma_array [58:6-58:13] {C:0} {A:{}}
| operatorBracket: [ [58:14-58:14] {C:0} {A:{}}
| identifier: l_ind [58:15-58:19] {C:0} {A:{}}
| operatorBracket: ] [58:20-58:20] {C:0} {A:{}}
| identifier: .f2_integer [58:21-58:31] {C:0} {A:{}}
| whiteSpace:      [58:32-58:35] {C:0} {A:{}}
| operatorMath: = [58:36-58:36] {C:0} {A:{}}
| whiteSpace:   [58:37-58:37] {C:0} {A:{}}
| number: 339782827 [58:38-58:46] {C:0} {A:{}}
| whiteSpace:   [58:47-58:47] {C:0} {A:{}}
| operatorMath: + [58:48-58:48] {C:0} {A:{}}
| whiteSpace:   [58:49-58:49] {C:0} {A:{}}
| identifier: l_ind [58:50-58:54] {C:0} {A:{}}
| newLine: \\\\n [58:55-58:55] {C:0} {A:{}}
| whiteSpace: \\\\t [59:1-59:1] {C:0} {A:{}}
| statement: let [59:2-59:4] {C:0} {A:{}}
| whiteSpace:   [59:5-59:5] {C:0} {A:{}}
| identifier: ma_array [59:6-59:13] {C:0} {A:{}}
| operatorBracket: [ [59:14-59:14] {C:0} {A:{}}
| identifier: l_ind [59:15-59:19] {C:0} {A:{}}
| operatorBracket: ] [59:20-59:20] {C:0} {A:{}}
| identifier: .f2_smallint [59:21-59:32] {C:0} {A:{}}
| whiteSpace:     [59:33-59:35] {C:0} {A:{}}
| operatorMath: = [59:36-59:36] {C:0} {A:{}}
| whiteSpace:   [59:37-59:37] {C:0} {A:{}}
| number: 18721 [59:38-59:42] {C:0} {A:{}}
| whiteSpace:   [59:43-59:43] {C:0} {A:{}}
| operatorMath: + [59:44-59:44] {C:0} {A:{}}
| whiteSpace:   [59:45-59:45] {C:0} {A:{}}
| identifier: l_ind [59:46-59:50] {C:0} {A:{}}
| newLine: \\\\n [59:51-59:51] {C:0} {A:{}}
| whiteSpace: \\\\t [60:1-60:1] {C:0} {A:{}}
| statement: let [60:2-60:4] {C:0} {A:{}}
| whiteSpace:   [60:5-60:5] {C:0} {A:{}}
| identifier: ma_array [60:6-60:13] {C:0} {A:{}}
| operatorBracket: [ [60:14-60:14] {C:0} {A:{}}
| identifier: l_ind [60:15-60:19] {C:0} {A:{}}
| operatorBracket: ] [60:20-60:20] {C:0} {A:{}}
| identifier: .f2_decimal [60:21-60:31] {C:0} {A:{}}
| whiteSpace:      [60:32-60:35] {C:0} {A:{}}
| operatorMath: = [60:36-60:36] {C:0} {A:{}}
| whiteSpace:   [60:37-60:37] {C:0} {A:{}}
| operatorMath: - [60:38-60:38] {C:0} {A:{}}
| number: 19838849.087712 [60:39-60:53] {C:0} {A:{}}
| whiteSpace:   [60:54-60:54] {C:0} {A:{}}
| operatorMath: + [60:55-60:55] {C:0} {A:{}}
| whiteSpace:   [60:56-60:56] {C:0} {A:{}}
| identifier: l_ind [60:57-60:61] {C:0} {A:{}}
| newLine: \\\\n [60:62-60:62] {C:0} {A:{}}
| whiteSpace: \\\\t [61:1-61:1] {C:0} {A:{}}
| statement: let [61:2-61:4] {C:0} {A:{}}
| whiteSpace:   [61:5-61:5] {C:0} {A:{}}
| identifier: ma_array [61:6-61:13] {C:0} {A:{}}
| operatorBracket: [ [61:14-61:14] {C:0} {A:{}}
| identifier: l_ind [61:15-61:19] {C:0} {A:{}}
| operatorBracket: ] [61:20-61:20] {C:0} {A:{}}
| identifier: .f2_decimal0 [61:21-61:32] {C:0} {A:{}}
| whiteSpace:     [61:33-61:35] {C:0} {A:{}}
| operatorMath: = [61:36-61:36] {C:0} {A:{}}
| whiteSpace:   [61:37-61:37] {C:0} {A:{}}
| number: 9389007739 [61:38-61:47] {C:0} {A:{}}
| whiteSpace:   [61:48-61:48] {C:0} {A:{}}
| operatorMath: + [61:49-61:49] {C:0} {A:{}}
| whiteSpace:   [61:50-61:50] {C:0} {A:{}}
| identifier: l_ind [61:51-61:55] {C:0} {A:{}}
| newLine: \\\\n [61:56-61:56] {C:0} {A:{}}
| whiteSpace: \\\\t [62:1-62:1] {C:0} {A:{}}
| statement: let [62:2-62:4] {C:0} {A:{}}
| whiteSpace:   [62:5-62:5] {C:0} {A:{}}
| identifier: ma_array [62:6-62:13] {C:0} {A:{}}
| operatorBracket: [ [62:14-62:14] {C:0} {A:{}}
| identifier: l_ind [62:15-62:19] {C:0} {A:{}}
| operatorBracket: ] [62:20-62:20] {C:0} {A:{}}
| identifier: .f2_char [62:21-62:28] {C:0} {A:{}}
| whiteSpace:         [62:29-62:35] {C:0} {A:{}}
| operatorMath: = [62:36-62:36] {C:0} {A:{}}
| whiteSpace:   [62:37-62:37] {C:0} {A:{}}
| string: \\"texto\\" [62:38-62:44] {C:0} {A:{}}
| operator: || [62:45-62:46] {C:0} {A:{}}
| identifier: l_ind [62:47-62:51] {C:0} {A:{}}
| newLine: \\\\n [62:52-62:52] {C:0} {A:{}}
| whiteSpace: \\\\t [63:1-63:1] {C:0} {A:{}}
| statement: let [63:2-63:4] {C:0} {A:{}}
| whiteSpace:   [63:5-63:5] {C:0} {A:{}}
| identifier: ma_array [63:6-63:13] {C:0} {A:{}}
| operatorBracket: [ [63:14-63:14] {C:0} {A:{}}
| identifier: l_ind [63:15-63:19] {C:0} {A:{}}
| operatorBracket: ] [63:20-63:20] {C:0} {A:{}}
| identifier: .f2_varchar [63:21-63:31] {C:0} {A:{}}
| whiteSpace:      [63:32-63:35] {C:0} {A:{}}
| operatorMath: = [63:36-63:36] {C:0} {A:{}}
| whiteSpace:   [63:37-63:37] {C:0} {A:{}}
| string: \\"textovarchar   \\" [63:38-63:54] {C:0} {A:{}}
| operator: || [63:55-63:56] {C:0} {A:{}}
| identifier: l_ind [63:57-63:61] {C:0} {A:{}}
| newLine: \\\\n [63:62-63:62] {C:0} {A:{}}
| whiteSpace: \\\\t [64:1-64:1] {C:0} {A:{}}
| statement: let [64:2-64:4] {C:0} {A:{}}
| whiteSpace:   [64:5-64:5] {C:0} {A:{}}
| identifier: ma_array [64:6-64:13] {C:0} {A:{}}
| operatorBracket: [ [64:14-64:14] {C:0} {A:{}}
| identifier: l_ind [64:15-64:19] {C:0} {A:{}}
| operatorBracket: ] [64:20-64:20] {C:0} {A:{}}
| identifier: .f2_date [64:21-64:28] {C:0} {A:{}}
| whiteSpace:         [64:29-64:35] {C:0} {A:{}}
| operatorMath: = [64:36-64:36] {C:0} {A:{}}
| whiteSpace:   [64:37-64:37] {C:0} {A:{}}
| keyword: today [64:38-64:42] {C:0} {A:{}}
| whiteSpace:   [64:43-64:43] {C:0} {A:{}}
| operatorMath: + [64:44-64:44] {C:0} {A:{}}
| whiteSpace:   [64:45-64:45] {C:0} {A:{}}
| number: 3 [64:46-64:46] {C:0} {A:{}}
| whiteSpace:   [64:47-64:47] {C:0} {A:{}}
| keyword: units [64:48-64:52] {C:0} {A:{}}
| whiteSpace:   [64:53-64:53] {C:0} {A:{}}
| keyword: day [64:54-64:56] {C:0} {A:{}}
| newLine: \\\\n [64:57-64:57] {C:0} {A:{}}
| whiteSpace: \\\\t [65:1-65:1] {C:0} {A:{}}
| statement: let [65:2-65:4] {C:0} {A:{}}
| whiteSpace:   [65:5-65:5] {C:0} {A:{}}
| identifier: ma_array [65:6-65:13] {C:0} {A:{}}
| operatorBracket: [ [65:14-65:14] {C:0} {A:{}}
| identifier: l_ind [65:15-65:19] {C:0} {A:{}}
| operatorBracket: ] [65:20-65:20] {C:0} {A:{}}
| identifier: .f2_dttime_y2s [65:21-65:34] {C:0} {A:{}}
| whiteSpace:   [65:35-65:35] {C:0} {A:{}}
| operatorMath: = [65:36-65:36] {C:0} {A:{}}
| whiteSpace:   [65:37-65:37] {C:0} {A:{}}
| keyword: current [65:38-65:44] {C:0} {A:{}}
| whiteSpace:   [65:45-65:45] {C:0} {A:{}}
| operatorMath: + [65:46-65:46] {C:0} {A:{}}
| whiteSpace:   [65:47-65:47] {C:0} {A:{}}
| identifier: l_ind [65:48-65:52] {C:0} {A:{}}
| whiteSpace:   [65:53-65:53] {C:0} {A:{}}
| keyword: units [65:54-65:58] {C:0} {A:{}}
| whiteSpace:   [65:59-65:59] {C:0} {A:{}}
| keyword: day [65:60-65:62] {C:0} {A:{}}
| newLine: \\\\n [65:63-65:63] {C:0} {A:{}}
| whiteSpace: \\\\t [66:1-66:1] {C:0} {A:{}}
| statement: let [66:2-66:4] {C:0} {A:{}}
| whiteSpace:   [66:5-66:5] {C:0} {A:{}}
| identifier: ma_array [66:6-66:13] {C:0} {A:{}}
| operatorBracket: [ [66:14-66:14] {C:0} {A:{}}
| identifier: l_ind [66:15-66:19] {C:0} {A:{}}
| operatorBracket: ] [66:20-66:20] {C:0} {A:{}}
| identifier: .f2_dttime_y2m [66:21-66:34] {C:0} {A:{}}
| whiteSpace:   [66:35-66:35] {C:0} {A:{}}
| operatorMath: = [66:36-66:36] {C:0} {A:{}}
| whiteSpace:   [66:37-66:37] {C:0} {A:{}}
| keyword: current [66:38-66:44] {C:0} {A:{}}
| whiteSpace:   [66:45-66:45] {C:0} {A:{}}
| operatorMath: + [66:46-66:46] {C:0} {A:{}}
| whiteSpace:   [66:47-66:47] {C:0} {A:{}}
| identifier: l_ind [66:48-66:52] {C:0} {A:{}}
| whiteSpace:   [66:53-66:53] {C:0} {A:{}}
| operatorMath: + [66:54-66:54] {C:0} {A:{}}
| whiteSpace:   [66:55-66:55] {C:0} {A:{}}
| number: 1 [66:56-66:56] {C:0} {A:{}}
| whiteSpace:   [66:57-66:57] {C:0} {A:{}}
| keyword: units [66:58-66:62] {C:0} {A:{}}
| whiteSpace:   [66:63-66:63] {C:0} {A:{}}
| keyword: day [66:64-66:66] {C:0} {A:{}}
| newLine: \\\\n [66:67-66:67] {C:0} {A:{}}
| whiteSpace: \\\\t [67:1-67:1] {C:0} {A:{}}
| statement: let [67:2-67:4] {C:0} {A:{}}
| whiteSpace:   [67:5-67:5] {C:0} {A:{}}
| identifier: ma_array [67:6-67:13] {C:0} {A:{}}
| operatorBracket: [ [67:14-67:14] {C:0} {A:{}}
| identifier: l_ind [67:15-67:19] {C:0} {A:{}}
| operatorBracket: ] [67:20-67:20] {C:0} {A:{}}
| identifier: .f2_dttime_y2f [67:21-67:34] {C:0} {A:{}}
| whiteSpace:   [67:35-67:35] {C:0} {A:{}}
| operatorMath: = [67:36-67:36] {C:0} {A:{}}
| whiteSpace:   [67:37-67:37] {C:0} {A:{}}
| keyword: current [67:38-67:44] {C:0} {A:{}}
| whiteSpace:   [67:45-67:45] {C:0} {A:{}}
| operatorMath: + [67:46-67:46] {C:0} {A:{}}
| whiteSpace:   [67:47-67:47] {C:0} {A:{}}
| identifier: l_ind [67:48-67:52] {C:0} {A:{}}
| whiteSpace:   [67:53-67:53] {C:0} {A:{}}
| operatorMath: + [67:54-67:54] {C:0} {A:{}}
| whiteSpace:   [67:55-67:55] {C:0} {A:{}}
| number: 2 [67:56-67:56] {C:0} {A:{}}
| whiteSpace:   [67:57-67:57] {C:0} {A:{}}
| keyword: units [67:58-67:62] {C:0} {A:{}}
| whiteSpace:   [67:63-67:63] {C:0} {A:{}}
| keyword: day [67:64-67:66] {C:0} {A:{}}
| newLine: \\\\n [67:67-67:67] {C:0} {A:{}}
| whiteSpace: \\\\t [68:1-68:1] {C:0} {A:{}}
| statement: let [68:2-68:4] {C:0} {A:{}}
| whiteSpace:   [68:5-68:5] {C:0} {A:{}}
| identifier: ma_array [68:6-68:13] {C:0} {A:{}}
| operatorBracket: [ [68:14-68:14] {C:0} {A:{}}
| identifier: l_ind [68:15-68:19] {C:0} {A:{}}
| operatorBracket: ] [68:20-68:20] {C:0} {A:{}}
| identifier: .f2_scroll [68:21-68:30] {C:0} {A:{}}
| whiteSpace:       [68:31-68:35] {C:0} {A:{}}
| operatorMath: = [68:36-68:36] {C:0} {A:{}}
| whiteSpace:   [68:37-68:37] {C:0} {A:{}}
| string: \\"texto scroll texto scroll texto scroll \\" [68:38-68:78] {C:0} {A:{}}
| newLine: \\\\n [68:79-68:79] {C:0} {A:{}}
| statement: end [69:1-69:3] {C:0} {A:{}}
| whiteSpace:   [69:4-69:4] {C:0} {A:{}}
| statement: for [69:5-69:7] {C:0} {A:{}}
| newLine: \\\\n\\\\n\\\\n [69:8-69:10] {C:0} {A:{}}
| statement: end [72:1-72:3] {C:0} {A:{}}
| whiteSpace:   [72:4-72:4] {C:0} {A:{}}
| statement: main [72:5-72:8] {C:0} {A:{}}
| newLine: \\\\n [72:9-72:9] {C:0} {A:{}}

================================================================================",
}
`;
